--- a/_posts/til/2020-11/2020-11-04-til.md
+++ b/_posts/til/2020-11/2020-11-04-til.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 201104_ git 입문하기
+title: 201104-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
