--- a/_posts/til/2020-11/2020-11-05-til.md
+++ b/_posts/til/2020-11/2020-11-05-til.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 201105_ pull-request에 대한 고민
+title: 201105-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
