--- a/_posts/til/2020-12/2020-12-01-til.md
+++ b/_posts/til/2020-12/2020-12-01-til.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 201201_ 회원가입 STEP2, iOS 버전과 available
+title: 201201-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 
