--- a/_posts/til/2020-12/2020-12-02-til.md
+++ b/_posts/til/2020-12/2020-12-02-til.md
@@ -27,9 +27,9 @@ comments: true
 
 ### 고민한 점 / 해결 방법
 ##### touchesBegan을 호출할 때 super 키워드 써야할까?
-&nbsp;Green, jake, 라자냐 그리고 꼬말과 이야기를 나누어보았다. 공식 문서에 따르면 'touchesBegan을 override할 때 super 키워드로 호출해주지 않으면 touchesMoved, touchesEnded, touchesCancled 등의 메서드들을 사용하지 않더라도 오버라이딩해줘야한다.'는 내용이 있었는데 실제로 구현해보니 이러한 제약사항이 적용되지 않는 점에 의문이 들었다. 캠퍼들과 고민해보아도 답을 찾을 수 없어 야곰에게 물어보게 되었다. 야곰 역시 공식문서의 내용에 의문을 가졌고, 공식 문서가 오래된 내용을 담고 있고, 갱신되지 않은 부분이 아닐까 하는 추측으로 마무리가 되었다.   <br>
+&nbsp;Green, jake, 라자냐 그리고 꼬말과 이야기를 나누어보았다. 공식 문서에 따르면 'touchesBegan을 override할 때 super 키워드로 호출해주지 않으면 touchesMoved, touchesEnded, touchesCancled 등의 메서드들을 사용하지 않더라도 오버라이딩 해줘야 한다.'는 내용이 있었는데 실제로 구현해보니 이러한 제약사항이 적용되지 않는 점에 의문이 들었다. 캠퍼들과 고민해보아도 답을 찾을 수 없어 야곰에게 물어보게 되었다. 야곰 역시 공식문서의 내용에 의문을 가졌고, 공식 문서가 오래된 내용을 담고 있고, 갱신되지 않은 부분이 아닐까 하는 추측으로 마무리가 되었다.   <br>
 &nbsp;그리고 그 과정에서 새로운 물음이 발생했다. 두 개의 view에서 모두 touchesBegan을 구현하고, 두 번째 뷰의 touchesBegan 내부에서 super 메서드로 한번 더 호출해주었을 때 첫 번째 뷰에서 구현한 touchesBegan과 함께 동작하는 것을 발견했다. 이에 대해서 라자냐가 하나의 링크를 공유해주었다.   
-[https://developer.apple.com/documentation/uikit/touches_presses_and_gestures/using_responders_and_the_responder_chain_to_handle_events](https://developer.apple.com/documentation/uikit/touches_presses_and_gestures/using_responders_and_the_responder_chain_to_handle_events)
+[Using Responders and the Responder Chain to Handle Events](https://developer.apple.com/documentation/uikit/touches_presses_and_gestures/using_responders_and_the_responder_chain_to_handle_events)
 
 ##### endEditing, resignFirstResponder
 &nbsp;키보드를 아래로 내리는 동작을 구현하던 중 두 가지의 메서드를 알게 되었다. textField를 터치하게 되면 textField는 firstResponder가 된다. firstResponder는 처음으로 이벤트를 받는 responder를 말한다. 그리고 resignFirstResponder 메서드는 firstResponder를 사임하는 메서드인데, 메서드를 호출한 firstResponder는 더 이상 firstResponder가 아니게 된다. 스포트라이트가 사라지는 것이다. 그렇기때문에 resignFirstResponder 메서드로 textField의 스포트라이트를 제거하여 키보드를 내리게 되는 것이다. endEditing은 비슷한 메서드이지만 주체가 특정되지 않는다는 차이점이 있었다. firstResponder를 알지 못하더라도 수행이 가능한 메서드이다.     
