--- a/_posts/til/2020-12/2020-12-03-til.md
+++ b/_posts/til/2020-12/2020-12-03-til.md
@@ -24,5 +24,5 @@ comments: true
 - 그렇기 때문에 비록 deprecated가 표시된 코드일지라도 아직은 유효하지 않을까하는 결론을 내렸다.
 
 ### 느낀점
-- 캠퍼들과의 접촉이 많아지고 있다. 요즘 부쩍 다들 친해지고 있는 것 같다. 고민이 생겨도 귀찮아하지 않고 오히려 더 열정적으로 나서주는, 또 알려주는 캠퍼들이 고마웠다.
+- 캠퍼들과의 접촉이 많아지고 있다. 요즘 부쩍 다들 친해지고 있는 것 같다. 고민이 생겨도 귀찮아하지 않고 오히려 더 열정적으로 나서주고 또 알려주는 캠퍼들이 고마웠다.
 - 오늘 Green에게 deployment target이 iOS13 보다 낮은 버전이었던 문제를 어떻게 해결했는지 물어보았다. (꼬말과 내가 해결했던 방식보다 더 좋은 방법이 있을 거라 생각하여 물어보았다.) Green은 며칠 전, 이 문제에 대해 고민하지 않고 넘어가서 곧장 답변을 받을 수는 없었다. 하지만 이내 고민해보고 돌아와서는 꼬말과 내가 생각하지 못한 부분을 잘 채워주었다. 지나간 일이라 귀찮을 수도 있었을텐데도 열정적으로 탐구하는 모습이 멋있었다.
