--- a/_posts/til/2020-11/2020-11-12-til.md
+++ b/_posts/til/2020-11/2020-11-12-til.md
@@ -1,8 +1,35 @@
 ---
 layout: post
-title: 201112
+title: 201112-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
+### 학습 내용
+ - 짝(라자냐)와 세탁기, 자동 티켓발권기, 발뮤다 토스터기를 swift 언어로 나타내보았다. 먼저 일반화를 한 후, 추상화를 거쳐 swift 언어로 표현했다.
+
+##### 객체지향 프로그래밍
+- Object Oriented Programming
+- 객체지향 프로그래밍은 단순히 계산, 명령이 아닌, 우리가 살고 있는 세상을 프로그래밍하기 위해 나타났다. 객체지향 프로그래밍은 여러 개의 독립단위인 ‘객체’들이 상호작용하는 프로그램의 동작을 구현하고자 한다. 우리는 이 객체를 class를 이용하여 만들어낼 수 있다.
+- 클래스는 객체들의 공통적인 특성을 뽑아서 표현한 것으로 행위(메서드)와 특성(프로퍼티)로 이루어질 수 있다.
+
+
+##### 타입
+- 우리는 왜 타입을 사용해야 할까. 타입은 왜 필요할까.
+- 컴퓨터는 데이터를 0과 1로만 표현한다. 사람처럼 문자로 표현할줄 모른다. 컴퓨터는 문자열을 입력하면 0과 1로 변환하여 저장한다. 메모리에 저장된 값을 cpu가 처리를 하려면 값이 어떤 규칙으로 저장되어 있는지 알아야학기 때문에 타입을 명시해야 한다. 예를 들어, Int와 double은 서로 읽고 쓰는 규칙이 다른데, Int 타입인 100과 double 타입인 100.0은 0과 1의 구조가 다른, 배열이 다르게 저장되어 있어 서로 호환할 수 없다.
+- 변수는 타입이 서로 맞아야지만 값을 주고 받을 수 있다. C언어나 다른 언어들은 타입에 자유로운 경우도 있지만 swift는 타입에 엄격한 언어이다. 서로 다른 타입이면 무조건 형변환을 거친 후 넣어주어야 한다.
+
+##### 일반화와 추상화
+- 일반화는 서로 다른 개체들로부터 공통된 개념을 추출하는 것을 말한다. 
+- 추상화는 필요한 필요한 관점만을 추출하는 것을 말한다.
+
+### 문제점 / 고민한 점
+##### 더 나은 프로그래밍을 위해서 일반화와 추상화는 왜 필요할까?
+- 일반화와 추상화를 잘하면, 코드의 가독성과 재활용성이 좋아지는 것 같다. 또 메서드 내부의 세부적인 구현을 private 메서드로 써주면서 메서드 하나가 복잡하지 않게, 하나의 기능을 할 수 있도록 해준다. 프로그래밍이 코드를 쓰는 시간보다 다시 보는 시간, 유지 보수하는  시간이 더 많기 때문에 돌아가는 코드보다는 ‘읽기 좋은 코드’를 쓰는  것이  중요한 것  같다.
+
+##### private은 언제 쓸까?
+- 세탁기를 추상화하여 코드로 표현하는 과정에서, privat 개념을 만났다. 메서드 앞에 이런 단어들을 붙이는 이유가 뭘까. 
+- private은 ‘개인 소유의’ 말 그대로, 해당 코드블록 외부에서는 접근할 수 없도록, 메서드나 프로퍼티를 숨기는데에 사용할 수 있었다. 메서드도 사용자의 행동과 긴밀한 연관이 있는 메서드가 있고, 사용자의 행동과는  무관하게 내부적으로만 수행되는 메서드들이 있었다. 예를 들면, 세탁버튼을 눌러 작동하는 것은 사용자의 행동과 관련있지만 세탁기 드럼통이 돌아가고, 세제가 흐르는 동작은 사용자의 행동과는 무관한, 내부적인 동작이기 때문에 private으로 숨길 수 있었다. 만약 private 으로 숨기지 않는다면 사용자가 드럼통이 돌아가고, 세제가 흐르는 동작에 접근이 가능하게 되는데 당연히 세탁을 하는데에는 문제가 없지만 이는 불필요하고 과정을 복잡하게 만드는 요소가 될 것이다.
+
+
