--- a/_posts/til/2020-11/2020-11-02-til.md
+++ b/_posts/til/2020-11/2020-11-02-til.md
@@ -8,11 +8,13 @@ tags: [til]
 comments: true
 ---
 
-#### 학습 내용
- 앞서 코딩테스트로 작성했던 구구단 코드를 파트너와 서로 리뷰해보고, 페어 프로그래밍을 해보는 시간을 가졌다. 파트너의 코드를 볼 수 있는, 또 내 코드에 대한 코멘트를 얻을 수 있는 좋은 시간이었다. 특히 페어 프로그래밍은 네비게이터와 드라이버로 역할을 나누는 생소한 방식이었는데 파트너의 코드를 천천히 따라가면서 의도와 스타일을 파악하고, 나와는 다른 방식으로 코드를 접근해보는 경험을 할 수 있었다.
+# 학습 내용
+ - 앞서 코딩테스트로 작성했던 구구단 코드를 파트너와 서로 리뷰해보고, 페어 프로그래밍을 해보는 시간을 가졌다. 파트너의 코드를 볼 수 있는, 또 내 코드에 대한 코멘트를 얻을 수 있는 좋은 시간이었다. 특히 페어 프로그래밍은 네비게이터와 드라이버로 역할을 나누는 생소한 방식이었는데 파트너의 코드를 천천히 따라가면서 의도와 스타일을 파악하고, 나와는 다른 방식으로 코드를 접근해보는 경험을 할 수 있었다.
+ 
+ <br>
 
-#### 문제점 / 고민한 점
- 아직 빈틈투성이인 나의 기본기가 여실히 드러났다. 모르는게 부끄럽기 보다, 파트너에게 좋은 리뷰를 해주지 못한 것이 아쉬웠다. 코드 리뷰를 함께 했던 캠퍼 ‘이니’의 코드를 봤을때는 좀 놀라웠다. (아직 뭐가 좋은 코드인지는 잘 모른다만,) 얼렁뚱땅인 나의 코드에 비해 이니의 코드는 훨씬 간결하기도 했고, 내가 모르는 개념이 등장하기도 했다. 최선을 다했지만 거의 질문에 가까운 리뷰를 하게 되었다. 반면 이니는 나의 코드에 대해, 그리고 내가 모르는 부분에 대해 친절하게 설명을 해주었고 내가 무엇을 모르는지를 알게 해주어 몹시 고마웠다.
+# 문제점 / 고민한 점
+ - 아직 빈틈투성이인 나의 기본기가 여실히 드러났다. 모르는게 부끄럽기 보다, 파트너에게 좋은 리뷰를 해주지 못한 것이 아쉬웠다. 코드 리뷰를 함께 했던 캠퍼 ‘이니’의 코드를 봤을때는 좀 놀라웠다. (아직 뭐가 좋은 코드인지는 잘 모른다만,) 얼렁뚱땅인 나의 코드에 비해 이니의 코드는 훨씬 간결하기도 했고, 내가 모르는 개념이 등장하기도 했다. 최선을 다했지만 거의 질문에 가까운 리뷰를 하게 되었다. 반면 이니는 나의 코드에 대해, 그리고 내가 모르는 부분에 대해 친절하게 설명을 해주었고 내가 무엇을 모르는지를 알게 해주어 몹시 고마웠다.
 
 * 내가 받은 코드 리뷰
     * Any 타입은 범위가 너무 넓은 타입이기때문에 지양하는 것이 좋다.
@@ -33,8 +35,9 @@ comments: true
 * 몰랐던 것
   * .map
 
+<br>
 
-#### 해결 방법
+# 해결 방법
  몰랐던 부분을 찾아보고, 코드를 다시 작성해보는 시간을 가졌다.
 
 1) readLine
