--- a/_posts/til/2020-11/2020-11-06-til.md
+++ b/_posts/til/2020-11/2020-11-06-til.md
@@ -7,11 +7,13 @@ permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
-### 학습 내용
+# 학습 내용
 - 옵셔널에 대해서 공부했다. 암시적 추출과 강제 추출은 비슷하게 생겼는데 뉘앙스가 달랐다. 강제 추출은 옵셔널을 언래핑하는 것이지만, 암시적 추출은 언래핑없이 사용할 수 있는 옵셔널이다.
 - 클래스의 초기화. 클래스는 모든 프로퍼티에 값이 있어야  정의될 수 있다. 그렇기 때문에 클래스는 모든 프로퍼티를 초기화할 수 있는 init 함수가 필수적이다. 이때 옵셔널(주로 암시적 추출)을 사용하면 init 구문에서 바로 초기화하지 않더라도 필요할 때 프로퍼티를 초기화하여 사용할 수 있다.
 - 옵셔널은 enum 과 generic으로 이루어져 있다.
 - assert 함수는 디버깅 모드에서만 작동하는 조건을 검증하는 함수이다. assert(조건문, “string”) 함수는 조건문이 참이 아니면 “string”이 출력되고, 그 상태로 종료를 시켜주는 함수이다. guard 역시 빠르게 함수를 종료시키는 함수인데, guard의  else 블록에는 return, break 등 실행을 종료하는 명령어가 필요하다.
 
-### 문제점 / 고민한 점
+<br>
+
+# 문제점 / 고민한 점
 - 옵셔널 강제 해제에 대한 이야기를 나누었다. 강제 해제는 nil이 발생할 경우 에러가 발생하기 때문에 확실하게 nil이 아닌 경우라고 생각하고 강제 해제를 할 수도 있지만, 추후에 프로그래밍을 수정해야할 아주 다양한 경우들을 고려하여 되도록이면 강제해제를 피하는 것이 좋다. 당장의 코드에서는 오류가 일어나지 않을지언정, 상황이 조금 달라질 경우를 언제나 염두해두어야 한다.
