--- a/_posts/til/2020-11/2020-11-08-til.md
+++ b/_posts/til/2020-11/2020-11-08-til.md
@@ -6,12 +6,18 @@ permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
-### 학습 내용
+# 학습 내용
 - 묵찌빠 기능 구현 코드를 다시 썼다. 앞서 제출했던 코드에서 여러가지 피드백을 받았는데, 어떻게 피드백을 해결하면 좋을지 고민하고 고민해야 했다.
 - xcode 프로젝트를 생성하게 되면 첫 줄에 ‘import foundation’이라는 코드가 적혀있는 것을 볼 수 있다. 묵찌빠 프로젝트를 하면서 아무 생각없이 import foundation을 지워버렸는데 foundation이 뭐길래, 이것을 지웠는데도 코드 동작에는 아무 문제가 없었을까. foundation은 프레임워크 중 하나이며, 앱 개발을 하는데에 필요한 템플릿이 들어있는 상자와 같은 것이다. 
-### 문제점 / 고민한 점
+
+<br>
+
+# 문제점 / 고민한 점
 - 이전에 제출한 코드에는 하나의 함수에 너무 많은 기능이 들어가 있었다. 하나의 함수에 거의 모든 기능을 구현했던 것 같다. 왜 하나의 함수가 아닌, 여러 함수로 기능을 분산시켜 작성하면 좋을까? 내 생각이지만, 함수 하나에 모든 기능을 넣어버리면 코드를 수정해야할 때 기능단위가 아닌 함수 전체를, 즉 코드 전체를 검토해야 하는 것 같다. 또한 기능이 추가되거나 복잡하고 긴 프로그래밍이 될 경우, 쉽게 읽을 수, 파악할 수 없을 것이다. 반면 기능별로 나누어 함수를 작성하게 되면 수정이 용이하고, 각 함수의 코드 길이가 길지않아 가독성 역시 좋을 것이다.
 - readLine으로 받아온 값을 어떻게 처리하면 좋을지 고민해야 했다. 사용자 인터페이스 혹은 기획의 변경 가능성을 고려하여 그러할 경우, 번거롭지 않게 코드를 수정할 수 있는 방법을 생각해야 했다. 짧고 간결한 코드도 좋지만 딱 보았을 때 직관적이고 손이 많이 가지 않는 구조에 대해 고민했다.
 - 다른 사람이 보아도, 3년 뒤의 내가 보더라도 명확하게 이해할 수 있는 코드에 대해 생각해보았다.
-### 해결 방법
+
+<br>
+
+# 해결 방법
 - 코드라 하면 효율적인 것이 좋은 것일 거라고 생각했는데, 그것보다 중요한 것은 하나의 언어처럼 ‘소통’할 수 있는 코드를 쓰는 것이었다. 줄이거나 생략하는 것도 코드의 명확성을 해치지 않는 선에서 활용해야 했다. 전달인자가 무엇인지, 변수나 상수 혹은 함수, 클래스의 이름 등 어떤 것에 대한 코드인지를 명확하게 보여주는 네이밍이 필요한 것 같다. 코드가 조금 길어질지언정 다른 누군가가 코드를 보더라도 알아볼 수 있게, 최대한 짧으면서도 친절한(?) 코드를 써보았다.
