--- a/_posts/til/2020-11/2020-11-09-til.md
+++ b/_posts/til/2020-11/2020-11-09-til.md
@@ -6,28 +6,30 @@ permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
-### 학습 내용
-##### H.I.G
+# 학습 내용
+#### H.I.G
 - H.I.G 문서를 훑어보고 아이폰의 기본앱 (설정 앱)을 들여다보며 어떤 점이 고려되어 앱이 디자인 되었는지에 대해 고민해보았다. H.I.G는 동일한 사용자 경험을 제공하기 위해 만들어진 문서로 앱의 통일성을 위해 권장하는 규칙에 대한 문서이다.
 - [https://developer.apple.com/design/human-interface-guidelines/](https://developer.apple.com/design/human-interface-guidelines/)
 
-##### 화면 전환
+#### 화면 전환
 - 화면 전환의 modal(세로)과 navigation(가로)는 정보의 연속성에 따라 구분해서 사용할 수 있다. navigation은 이전 정보에 대한 깊은 정보로 이동하며, 이전의 행위와 이어지는 경우 사용되고, modal은 연속성없이 잠깐 새로운 작성을 한다거나 추가적인 행동을 할때 사용된다.
 
-##### Tab bar, Tool Bar
+#### Tab bar, Tool Bar
 - 툴바와 탭바는 앱의 하단에 위치한다는 점에서 같지만, 탭바는 화면 전환의 방식 중 하나로 독립적인 기능을 구분하는 기능을 하고, 툴바는 지금의 화면에 기능을 추가하는, 화면 내에서  특정한 기능을 수행하기 위한 것이다.
 
-### 문제점 / 고민한 점
-##### 화면 전환
+<br>
+
+# 문제점 / 고민한 점
+#### 화면 전환
 - 오늘 발표 중, ‘사람의 시각은 왼쪽에서 오른쪽으로 이동하는 것에 자연스러움을 느낀다.’에 대해서 캠퍼 라자냐가 ‘그렇다면 글을 반대로 읽는 아랍어의 경우에도 똑같이 작용하는가’ 하는 질문을 했다. 이후 라자냐는 직접 아이폰의 언어를 아랍어로 변경해보니 화면의 좌우가 바뀌고, 화면 전환의 방향 역시 반대로 바뀌었다는 이야기를 해주었다. 글을  읽는 방향은 사람의  시각 경험에 중요한 영향을 미치는 것 같다. 아이폰의 앱들에도 이 점이 반영되어 있는 것 같다.
 
-##### Text Field, Text View
-텍스트 필드와 텍스트 뷰는 사용자가 텍스트를 작성할 수 있는 UI요소이다. text field의 경우 사용자는 한 줄의 텍스트만 작성할 수 있는 반면, text view의 경우 사용자가 여러줄의 텍스트를 작성할 수 있다. 또한 placeholder의 유무에도 차이가 있는데 placeholder는 text field에서만 사용이 가능한 기능이다.
+#### Text Field, Text View
+- 텍스트 필드와 텍스트 뷰는 사용자가 텍스트를 작성할 수 있는 UI요소이다. text field의 경우 사용자는 한 줄의 텍스트만 작성할 수 있는 반면, text view의 경우 사용자가 여러줄의 텍스트를 작성할 수 있다. 또한 placeholder의 유무에도 차이가 있는데 placeholder는 text field에서만 사용이 가능한 기능이다.
 
-##### UITableViewCellStyleValue
-UITableViewCellStyleDefault
-UITableViewCellStyleSubtitle
-UITableViewCellStyleValue1 : 왼쪽에 title, 오른쪽에 subtitle
-UITableViewCellStyleValue2 : 오른쪽에 title, 왼쪽에 subtitle
+#### UITableViewCellStyleValue
+- UITableViewCellStyleDefault
+- UITableViewCellStyleSubtitle
+- UITableViewCellStyleValue1 : 왼쪽에 title, 오른쪽에 subtitle
+- UITableViewCellStyleValue2 : 오른쪽에 title, 왼쪽에 subtitle
 
 [https://developer.apple.com/design/human-interface-guidelines/ios/views/tables/](https://developer.apple.com/design/human-interface-guidelines/ios/views/tables/)
