--- a/_posts/til/2020-11/2020-11-10-til.md
+++ b/_posts/til/2020-11/2020-11-10-til.md
@@ -6,32 +6,36 @@ permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
-### 학습 내용
-##### WebView
+# 학습 내용
+#### WebView
 - web-browser를 구현하기 위해 WebView를 구현해보았다. 라이브러리에서 WebKit을 찾으니 Web View (deprecated)와 WebKit View 2개가 보였다. 찾아보니 WebView는 UIWebView로 지금은 deprecate되었고 wkWebView (WebKit View)로 대체되었다고 한다. UIWebView와 wdWebView는 성능의 차이가 나는데, 코드도 기계마냥 성능의 차이가  난다니 신기했다.
 - wkWebView를 사용하려면 WebKit이라는 프레임워크를 import해야 했고, URLRequest로 url을 받아와 load해주는 작업이 필요하다.
 
-##### ViewController 생명 주기
+#### ViewController 생명 주기
 - viewDidLoad와 loadView의 차이를 알아보면서 공부하게 되었다. 앱은 여러 화면으로 구성되고 화면은 하나의 뷰컨트롤러로 구성되는데 각각의 뷰컨트롤러(화면)은 생명 주기를 가지고 있다. 생명 주기를 잘 활용하면 화면이 나타나고 사라지는 순간 원하는 동작을 수행시킬 수 있다.
 - 앱이 실행되고 ViewController 객체가 생성된 후, loadView가 뷰를 만들어낸다. 그리고 loadView가 뷰를 만들어 메모리에 올리면 그때 viewDidLoad가 실행된다. viewDidLoad는 앱이 실행된 후 최초의 딱 한번만 실행된다는 특징이 있다.
 
-##### UIAlertController
+#### UIAlertController
 - 웹브라우저를 구현하는 중, url의 값이 nil일 경우 사용자에게 에러 메세지를 띄워주기위해 구현해보았다. 내 생각은 아니고, 라자냐의 생각이었는데 같은 문제를 두고 다르게 접근하는 모습이 놀랍다. 
 - H.I.G 문서를 함께 보면서 공부했는데 Cancel 버튼은 alert에서는 무조건 왼쪽에, actionSheet에서는 무조건 맨 아래쪽에 위치되어야 한다. 또 alert의 경우 보통 2개의 버튼을 제공하는 것을 권장하는데 사용자에게 단순한 선택지를 제공하기 위함이다. 버튼이 3-4개가 될 경우에는 Action Sheets를 사용하는 것이 좋다.
 
-### 문제점 / 고민한 점
-##### 함수의 기능별 구현
+<br>
+
+# 문제점 / 고민한 점
+#### 함수의 기능별 구현
 - 라자냐와 서로의 코드를 리뷰하는 시간을 가졌다. step1은 복잡하지 않은 기능 구현이었기에 서로 사용한 코드 내용을 비슷했지만 코드의 모양? 구조?는 달랐다. viewDidLoad에 구현 코드를 모두 넣어둔 나의 코드에 비해 라자냐의 코드는 함수로 잘 나누어져 있어 파악하기에도 용이했고 좀 더 복잡한 코드가 쓰이더라도 접근하기가 좋아보였다. 사실 저번주부터 이어지는 고민이기도 했는데, 오늘 좀 명쾌해진 것 같다.
 
-##### Naming
+#### Naming
 - 라자냐와 이번주 프로젝트를 진행하면서 네이밍에 신경을 써보는 것을 팀룰로 정했다. 네이밍을 잘해야 코드를 파악하기 쉬워지는 것은 자명한 사실이다. 오늘 뷰컨트롤러의 생명주기를  공부하며 ‘viewWillAppear’, ‘viewDidDisappear’ 등의 네이밍을 보고 처음보는 내용이지만 바로 알아차릴 수 있었다. 프로젝트 중 상수, 함수 등의 이름을 정할때에도 그냥 url이 아니라 어떤 url인지, 어떤 기능을 하는 함수인지를 명확하게 써야했다. 특히 함수의 경우 이름에 기능의 범위를 명확하게 적어주는 것이 좋고, 주로 동사로 이름이 시작된다. 그 이유는 함수가 보통 어떤 동작을 수행하는 기능을 하기 때문이 아닐까 생각해보았다. 
 
+<br>
 
-### 느낀점
+
+# 느낀점
  - 프로젝트를 하면서, 또 공부를 하면서 가장 어려운 부분이 내가 무엇을 모르는지, 무엇을 공부해야하는지를 파악하는 것이 어려운 것 같다. 설령 맞는 방향으로 가더라도 맞는지 의심될 때가 많다. 라자냐가 많이 도와주고 응원도 해줘서 너무 고맙다. 캠프에서는 혼자하는 공부가 아니라 캠퍼들과 같이 공부할 수 있어서 좋은 것 같다.
 
 
-##### 참고한 링크
+#### 참고한 링크
 
 1) wkWebView와 UIWebView의 차이점
 [https://hyowonee.github.io/19-42-iOS-WKWebView.html](https://hyowonee.github.io/19-42-iOS-WKWebView.html)
