--- a/_posts/til/2020-11/2020-11-05-til.md
+++ b/_posts/til/2020-11/2020-11-05-til.md
@@ -7,14 +7,16 @@ tags: [til]
 comments: true
 ---
 
-#### 학습 내용
+# 학습 내용
 - 어제 영상으로 접했던 컴퓨터 이야기를 바탕으로 4명씩 조를 짜서 땅따먹기 게임을 하였다. 컴퓨터와 관련된 두 단어를 이용하여 문장을 만들어서 땅을 따먹는 게임이었는데, 컴퓨터의 역사부터 구조, 연산 방식 등 전반적인 지식을 나의 말로 바꾸어볼 수 있는 유익한 시간이었다.
 
 - 이번주 팀 프로젝트인 묵찌빠의 기능을 구현해보았다. 앞서 구현했던 가위바위보와 비슷한 것도 같지만 좀 더 까다로웠다. 기능을 구현해내기는 했으나 다시 보니 코드가 마음에 들지않아 크게 공사를 해야할 것 같다.
 
 - 야곰이 달아준 ‘PR을 보낸 이후에는 새로운 커밋이 새로운 PR 알림처럼 동작한다’는 코멘트가 이해가 안돼서 파트너인 찌로와 다양한 시도를 통해 궁금증을 해결해 나갔다. 아직 pull-request에 대한 이해가 미흡한데 다양한 삽질을 통해 궁금증을 하나 둘씩 해결할 수 있었다.
 
-#### 문제점 / 고민한 점
+<br>
+
+# 문제점 / 고민한 점
 - 컴퓨터
 주기억장치는 왜 주기억장치인가. 주기억장치는 정보를 처리할 때 가장 먼저 받아와 처리하는 1차 기억장치이며 cpu가 직접적으로 접근할 수 있는 기억장치이다. 컴퓨터는 주기억장치만 있어도 동작을 할 수가 있다. 하드디스크는 정보의 저장을 도와주는 보조로서의 기억장치이다.
 
@@ -24,9 +26,11 @@ comments: true
 - pull-request
 야곰의 코멘트를 이해하기 위해서, 또 pull-request에 대해 이해하고 싶었다. 잘 쓰여진 블로그 글들이 많지만 pull-request와 친해지기 위해서는 직접 경험해보아야 한다고 생각해서 파트너인 찌로와 여러 시도를 했다. 사실 그렇다고 엄청난 수확이 있지는 않았지만, PR에 익숙해지고, 또 자잘자잘한 궁금증들을 해결하는 시간이 되었다.
 
+<br>
 
-#### 해결 방법
-**pull-request**
+
+# 해결 방법
+#### pull-request
 - **Fork를 하지 않고 PR을 보낼 수 있을까?**   
  불가능하다. 찌로의 저장소를 Fork 하지 않고 바로 clone하여 add, commit, push를 진행해봤는데 권한이 없다는 에러가 계속 발생했다. 생각해보니 내가 clone 해온 저장소는 저의 저장소가 아니라 찌로의 저장소였기 때문에 push 자체가 불가능했던 것이다.  
 - **PR을 보낸 후 commit을 하면 알림이 간다?**   
@@ -46,6 +50,8 @@ comments: true
   2. 찌로는 PR을 처리(merge, closed)하지 않고 그냥 둔다.
   3. 다시 commit, push를 진행하고 PR을 보내는 시도를 한다. 이때 PR을 보낸 후 또 PR을 보내려니 보내지지 않았다. 대신 view pull-request 버튼이 활성화 되어있었는데, PR에 추가된 커밋 내용이 반영되어 있는 것을 확인했다.
   4. 찌로가 PR을 merge 혹은 closed 한 후 다시 PR을 보내는 시도를 한다. 이때는 정상적으로 PR을 보낼 수 있었다.
+  
+  <br>
 
-#### 결론
+# 결론
 PR을 보낸 상태 (처리하지 않은 상태)로 commit을 하면, 상대방에게 메일이 전송되고, 새로운 push 후 다시 PR을 보낼 수는 없지만 보냈던 PR에 commit이 반영된다.
