--- a/_posts/til/2020-12/2020-12-01-til.md
+++ b/_posts/til/2020-12/2020-12-01-til.md
@@ -8,38 +8,41 @@ tags: [til]
 comments: true
 ---
 
-### 학습 내용
+# 학습 내용
  꼬말과 회원가입 화면 프로젝트 STEP2를 진행했다.
 
-##### 키보드 제어
+#### 키보드 제어
  - touchesBegin 메서드로 빈 화면 터치시 키보드를 내릴 수 있었다. 터치가 시작되는 시점에 대한 메서드인 것 같다.
  - textFieldShouldReturn 메서드로 키보드에서 return 키를 눌렀을 때 키보드를 내릴 수 있었다.
  - Attributes Inspector에서 키보드를 커스터마이징할 수 있었다.
  - 참고 링크: [https://ikkison.tistory.com/19](https://ikkison.tistory.com/19)
 
-##### Xcode와 iOS버전
+#### Xcode와 iOS버전
 - 프로젝트에서는 deployment target을 설정하여 iOS의 버전을 어디까지 지원할지를 정할 수 있다.
 - 이때 iOS 버전에따라, Xcode의 버전에 따라 구현되는 코드가 달라지는 부분이 있어서 에러가 발생할 수 있다. 예를 들어 UIScene 같은 경우에는 iOS 13.0부터만 지원되는 코드이기 때문에 그 이전의 버전에서는 동작하지 않는다.
 - @available, #available을 통해서 에러를 해결해줄 수 있는데, @available은 메서드나 클래스, 프로토콜  앞에 써줄 수 있고, #available은 조건문으로 if나 guard문으로 쓸 수 있었다.
 
+<br>
 
-### 고민한 점 / 해결 방법   
-##### 싱글톤, 타입 프로퍼티명
+
+# 고민한 점 / 해결 방법   
+#### 싱글톤, 타입 프로퍼티명
  - 싱글톤을 구현하면서 많이 쓰이는 키워드는 shared, default, main, common, standard, basic 등이 있다. UserInformation의 싱글톤을 구현하는 중, 어떤 키워드를 써야할지 꼬말과 이야기를 나누었다. 결과적으로 default 키워드를 선택하게 되었는데 이유는 가장 색깔이 없어보이는 무채색에 가까운 단어라고 생각했기 때문이다.
 - default를 프로퍼티로 쓸 때에는 백틱을 함께 써주어야 했다. default라는 키워드는 이미 swift에서 만들어져 있는 키워드였기 때문에 이런 표시가 필요했다. class와 같은 키워드 역시 마찬가지였다.
 
-##### 모달? 네비게이션?
+#### 모달? 네비게이션?
 - 2주전쯤인가 '정보의 연속성'이라는 답을 이미 내어놓은 적이 있다. 그래서 이번 프로젝트에서는 보다 쉽게 결정할 수 있을거라 생각이 들었는데 고민하는데에 꽤나 시간이 걸렸다.
 - 회원가입 후에는 원래 로그인 화면으로 돌아오기 때문에 이렇게만 본다면 이벤트성이므로 모달이 적합해보였는데, 회원가입이 진행되는 절차를 생각했을 때에는 네비게이션이 더 적합할 것 같았다.
 - ViewController는 모달 방식으로, NavigationController는 네비게이션 방식으로 화면 전환을 한다. 둘 다 쓰고 싶은데 어떻게 구현할 수 있을까? 꼬말과 고민하며 스토리보드로 구현해보았다.
 
+<br>
 
-### 느낀점
+# 느낀점
   - 꼬말과 많은 고민을 공유하고 해결했다. 꼬말은 이야기를 잘 들어주고 좋은 의견도 많이 내주어서 고마웠다.
   - iOS 버전에 대해서 처음 알게 되었고, 신선했다. 아직 project와 target 등의 개념이 공부가 덜 되었다. 시간내서 정리해보아야겠다.
   - 첫 주에 썼던 TIL을 읽어보았다. 비록 4주는 금방 지나가버린 시간이었지만 그 사이에 몸도 마음도 많은 변화가 있었다. 신기하다. 6개월이 정말 금방 끝나버릴 것 같다. 
   
-##### 고민 혹은 공부하고 싶은 것
+#### 고민 혹은 공부하고 싶은 것
   - SDK?
   - appDelegate / sceneDelegate
   - project / target
