--- a/_posts/til/2020-11/2020-11-16-til.md
+++ b/_posts/til/2020-11/2020-11-16-til.md
@@ -1,8 +1,53 @@
 ---
 layout: post
-title: 201116
+title: 201116-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
+# 학습 내용
+ kahoot을 통해 지난주의  내용을 복습하고, 디자인 패턴에 대해서 고민해보았다.
+
+#### 지난주 복습-kahoot
+- 타입을 실체화한 것을 인스턴스라고 부른다. 여기서 타입이란, 개체를 대표하는 표현으로 struct, class, enum, protocol 등이 있다. 타입 자체는 실체가 아니기 때문에 일을 하지 않는다.
+- struct, class는 기본 타입이 아니다. 타입 자체는 실체가 아니기 때문에 인스턴스를 만들어 실체화해주어야 한다. 즉, 타입을 정의하기 위한 방식이지, Int나 String처럼 Swift에서 기본적으로 제공하는 ‘기본 타입’은 아니다.
+- 타입에 연관된 함수를 메소드라고 한다. 메소드가 함수이기도 한 것인데, 이렇게 용어를 한 번 더 만든 이유는 명확한 의사소통을 위해서이다. 
+
+#### 디자인 패턴
+- 코드를 정리하는 것. (일정한 기준을 가지고)
+- 디자인 패턴은 아주 다양하다. 즉, 다양한 기준으로서 코드를 분류할 수 있다. 
+
+#### 디자인 패턴의 장점
+- OOP의 다양한 문제상황에 대한 예방
+- 프로그래머 사이의 협업효율 향상
+- 프로그래머 사이의 의사소통 증진
+- 코드의 안정화 및 최적화
+- 코드의 재사용성 증가
+- 단, 적절히 잘 사용했을 때만! 디자인 패턴은 더 나은 프로그래밍을 위해 선배들이 정리해놓은 기록물일 뿐이지, 절대적인 척도는 아니다. 그러므로 맹목적으로 지키려는 태도보다는 유연한 대처가 필요한 부분이다.
+
+#### MVC 패턴
+- Model : data 등의 정보를 가지고 있는 역할을 한다. View, 사용자와는 직접적으로 소통하지는 못한다. 
+- View : 사용자와 직접적으로 소통하는 역할을 한다. Model과 직접적으로 소통하지는 못한다. 
+- Controller : View와 Model을 매개해주는 역할. 
+-  Model - Controller - View
+
+<br>
+
+# 고민한 점 / 해결 방법
+#### 디자인 패턴을 왜 고민하게 되었을까?
+- 디자인 패턴은 어떤 기준을 가지고 코드들을 정리해주는 역할을 한다. 간단한 프로젝트 정도는 흘러가는대로 코드를 작성해도 파악하기가 쉽지만, 보다 복잡한 프로젝트라면 코드의  양이 훨씬 많아질 것이고, 복잡하여 코드를 파악하기도 힘들 것이다. 이러한 코드를 일정한 기준에 맞추어 정리해두는 것이 디자인 패턴의 의미일 것이다.
+- 디자인 패턴은 특히 유지, 보수 측면에 있어서 핵심적인 방안을 제시한다. 코드의 역할을 확실하게 나누어둠으로서, 이후에 코드를 수정해야 하거나 코드에 변화가 생기더라도 해당 파트의 코드만 공사하면 된다는 장점이 있다. 
+
+<br>
+
+# 느낀점
+- delegate를 패턴이라고 하던데, 왜 패턴이라고 하는지, 저번주의 내용에 이어서 고민해보아야겠다. 
+- ‘어떤 디자인 패턴이 더 좋다’ 라는 말은 위험한 말인 것 같다. 프로젝트의 내용이나, 코드의 내용이 다르기 때문에 정리법이 달라지기 때문에 어떤 패턴 자체가 더 좋은 것이라고 말할 수는 없다. 다만, ‘어떤 상황에서는 어떤 디자인 패턴이 더 효율적일 수 있겠다’ 정도는 고려해볼 수 있을 것 같다. 정답은 없겠지만!
+
+
+
+
+#### 참고한 링크
+- [MVC 디자인 패턴](https://developer.apple.com/library/archive/documentation/General/Conceptual/DevPedia-CocoaCore/MVC.html#//apple_ref/doc/uid/TP40008195-CH32-SW1)
+
