--- a/_posts/til/2020-11/2020-11-18-til.md
+++ b/_posts/til/2020-11/2020-11-18-til.md
@@ -1,8 +1,49 @@
 ---
 layout: post
-title: 201118
+title: 201118-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
+
+# 학습 내용
+ 어제 PR을 보냈던 JuiceMaker 만들기 STEP1의 코드를 크게 수정했다. 오늘은 큰 개념들보다는 작은 개념들을 여러개 보게 되었다. 그리고 JuiceMaker의 코드를 어떻게 역할 분담을 하면 좋을지에 대해서 고민을 많이해보았다. 
+
+#### private(set)
+- 어제 쓴 TIL에 지니가 슬쩍 키워드를 던져줬다. 산타 할아버지가 몰래 두고 간 선물을 발견한 기분이었다. 
+- private(set)을 사용하면 읽기는 internal 수준의 접근제한 레벨을 가지지만 쓰기는 private 수준의 접근제한 레벨을 가지게 된다. (아마 클래스나 구조체가 internal 수준의 접근제한 레벨이었기 때문일 것이다.)
+- private(set)뿐만 아니라, fileprivate(set), internal(set) 키워드를 작성하여 더 낮은 액세스 수준을 할당해줄 수 있다.
+- [https://docs.swift.org/swift-book/LanguageGuide/AccessControl.html](https://docs.swift.org/swift-book/LanguageGuide/AccessControl.html)
+
+
+#### mutating
+- 구조체 내부에서는 프로퍼티의 값이 변경되는 함수를 작성하기 위해서는 mutating 키워드가 필요했다.
+
+####  삼항연산자
+- 삼항연산자는 간단한 2가지의 case를 다루는 if-else 혹은 siwtch 구문을 대신하여 간결하게 표현할 수 있는 방법이다.
+- ‘if 조건문 {코드1} else {코드2}’를 대신하여 ‘조건문 ? 코드1 : 코드2’로 쓸 수 있다. 조건문이 참일 경우 코드1을, 거짓일 경우 코드2를 실행시킨다.
+
+<br>
+
+# 고민한 점 / 해결 방법
+#### 재고관리, JuiceMaker, class와 struct 중 무엇을 써야할까?
+- 어제 고민했던 class와 struct의 차이점과 쓰임새에 대한 고민을 이어갔다. 결과적으로 재고관리는 구조체, JuiceMaker는 클래스를 선택했다.
+- 재고관리를 구조체로 선택한 이유는 단순히 어떤 데이터를 묶어두려는 목적이었기 때문이다. 또한 상속이 필요한 이유도 없고, 값을 참조하는 것보다 복사하는 것이 합리적일 것이라고 생각했기 때문이다. ‘복사하는 것이 합리적이다.’는 재밌는 상상으로 접근해본 결과이다.  물론 이 접근이 맞는지는 잘모르겠다. 
+- 재고를 관리하는 기존의 인스턴스 말고, 새로운 인스턴스가 생겨나는 경우는 어떤 경우일까? 새로운 재고관리  인스턴스가 필요한 경우는 쥬스가게가 체인점이 생기는 경우 정도라고 생각했다. 이때 모든 체인점이 재고를 공유해야할 이유도 없고, 그래서는 안된다. 매장(자판기)마다 독립적인 재고를 가지고 있어야하기 때문이다. 그렇기 때문에 재고관리 인스턴스를 생성했을 경우, 재고를 공유하는 참조보다는 독립적으로 재고를 관리할 수 있는 복사가 더 적합할 것이라는 생각이 들었다.
+- 비슷한 맥락에서 JuiceMaker를 클래스로 정한 이유는, 쥬스를 만드는 기계(혹은 가게)는 상속이 필요할 것이라고 생각했기 때문이다. 체인점처럼 자판기를 늘린다고 할떄, 자판기의 기능과 성능은 공유가 되어야 하기 때문이다. (가게라고 해도 마찬가지.) 혹은 버전별로 업그레이득가 될 수도, 지역 특성에 따라 약간 변형이 될 수도 있다. 따라서 JuiceMaker를 일반화, 추상화된 클래스로 정의하고 그 안에 해당 지점의 재고를 넣을 수 있는 인스턴스를 생성하는 형태로 구성했다.
+
+#### 추상화와 접근제한
+- 클래스와 구조체를 정하는 나름의 기준을 만들어보니 추상화와 접근제한에 대한 기준도 조금 잡힌 것 같다.
+- 내부적으로 행해지는 행동들과, 유저의 행위와 직접적인 연관이 있는 행동들을 구분해서 접근제한 수준을 설정해주어야 했다. 최대한 외부에서 클래스 혹은 구조체의 속성을 수정할 수 없도록 해야 코드의 변경사항을 추적하고 유지하는 데에 좋다.
+
+#### mutating은 왜 구조체에만 있을까?
+- mutating 키워드를 발견해서 좋았는데, 클래스에서는 mutating 키워드가 없어도 프로퍼티의 값을 변경하는 메서드를 작성할 수 있다는 것을 발견했다.
+- 왜 mutating은 구조체에만 있는 키워드일까? 음.. 잘 모르겠다. 내일 수업시간이나 캠퍼들에게 물어봐야겠다.
+
+
+<br>
+
+# 느낀점
+ 오늘은 ‘이게 뭐지?’ 하면서 찾아보는 시간보다 '이걸 어떻게 하면 좋을까?’ 고민하는 시간이 더 많았다. 그래서인지 프로젝트가 더 재밌게 느껴졌다.
+
