--- a/_posts/til/2020-11/2020-11-20-til.md
+++ b/_posts/til/2020-11/2020-11-20-til.md
@@ -1,8 +1,54 @@
 ---
 layout: post
-title: 201120
+title: 201120-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
+# 학습 내용
+ KVO와 KVC에 대해 학습하고 예제를 만들어보았다. 이해하고 예제를 만들어 보는 과정에서 전전긍긍했다. 
+
+#### KVO
+- 어제 학습했던 내용을 토대로 실제로 사용해보는 코드를 작성해보았다. 
+- KVO기능을 사용하기 위해서는 반드시 NSObject를 상속받아야 한다.
+- 원래는 addObserver 메서드와 observeValueForKeyPath 메서드, 두 개의 메서드가 필요한데, 이 기능이 합쳐진 observe 메서드 하나만 사용해도 기능을 구현할 수 있었다.
+- KeyPath는 간단하게 옵저빙하려는 프로퍼티의 이름을 String 타입으로 표현한 것이다.
+- 파라미터 options: [.old, .new]를 쓰면 newValue와 oldValue 값을 가져올 수 있었다.
+- option을 생략할 수도 있었다.
+- 변화를 감지할 프로퍼티 앞에는 @objc dynamic 키워드를 붙여주어야 한다.
+- observe 메서드는 결과를 NSKeyValueObservation 타입으로 리턴한다.
+- willSet, didSet과 같은 프로퍼티 옵저버와 유사하지만, KVO는 값의 변화를 외부에서 감지할 수 있다는 중요한 차이점이 있었다. 코드 내부를 직접적으로 손보지 않아도, 외부에서 작성한 코드로 변화를 감지할 수 있다. 라이브러리와 같은 내부적으로 변경할 수 없는 외부 모듈을 가져와 사용할 때 유용하다.
+
+#### KVC
+- Key-Value-Coding의 약자
+- 프로퍼티에 간접적으로 접근할 수 있는 방법이다.
+- 역시 NSObject를 상속받아야하며 @objc dynamic 키워드를 적어줘야 한다.
+
+#### github
+- git push origin —delete <branch name> : 원격 저장소의 브랜치를 삭제한다.
+
+<br>
+
+# 고민한 점 / 해결 방법
+
+#### @objc dynamic?
+- dynamic은 dynamic dispatch를 활성화시키는 오퍼레이터이며 @objc는 Objective-C와의 호환성을 만들어주는 키워드였다.
+- dynamic dispatch, 동적, 정적 디스패치라는 말이 어려웠다. 얼핏 보기로는 동적 프로그래밍, 정적 프로그래밍이라는 말도 있었던 것 같은데, 차근차근 공부해보아야겠다.
+- @objc dynamic 키워드를 지워버려도 곧바로 에러가 발생하지는 않았는데, 시뮬레이터를 실행할 때 에러가 발생하는 것을 발견했다.
+
+<br>
+
+# 느낀점
+ - Notification의 실사용 예시도  만들어보고 싶었는데 KVO에서 생각보다 훨씬 시간이 많이 걸려서 하지 못했다. 하루종일 씨름했는데, 그래도 끝내 KVO를 이해하고, 예제를 끝내 만들어내서 뿌듯하다.
+
+
+
+#### 참고 링크
+- KVO
+[https://yagom.net/forums/topic/kvc와-kvo의-활용-및-목적/](https://yagom.net/forums/topic/kvc와-kvo의-활용-및-목적/)
+[https://hackernoon.com/kvo-kvc-in-swift-12f77300c387](https://hackernoon.com/kvo-kvc-in-swift-12f77300c387)
+
+
+
+
