--- a/_posts/til/2020-11/2020-11-24-til.md
+++ b/_posts/til/2020-11/2020-11-24-til.md
@@ -1,7 +1,34 @@
 ---
 layout: post
-title: 201124
+title: 201124-TIL
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
+# 학습 내용
+ 커밋 메세지의 규칙에 대해 알아보고, JuiceMaker STEP2 기본 화면 구현을 했다.
+
+#### 커밋 규칙
+- 커밋 메세지를 잘짜여진 규칙 속에서 작성하면 역시 가독성이 좋아지고, 유지 보수에 좋다.
+- feat: 새로운 기능을 추가
+- fix: 버그 수정
+- refactor: 코드 리팩토링
+- style: 코드 형식, 정렬, 주석 등 (동작에 영향을 주는 코드 변경 없음)의 변경
+- test: 테스트 추가, 테스트 리팩토링(제품 코드 수정 없음, 테스트 코드에 관련된 모든 변경에 해당)
+- docs: 문서 수정(제품 코드 수정 없음)
+- chore: 기타 모든 변경, 빌드 업무 수정, 패키지 매니저 설정 등 위에 해당하지 않는 모든 변꼉 (제품 코드 수정 없음)
+
+#### 화면 전환 코드
+```SWIFT
+        let secondView = self.storyboard!.instantiateViewController(identifier: "SecondVC")
+        secondView.modalTransitionStyle = .coverVertical
+        present(secondView, animated: true)
+```
+화면 전환을 하기 위해서는 스토리보드의 identifier을 잘 설정해주고, 코드에서도 잘 받아주어야 한다.
+
+
+# 고민한 점 / 해결 방법
+
+#### ViewController? NavigationController?
+- 프로젝트에서 둘 중에 무엇을 써야할지 고민했다. 처음에는 무턱대고 NavigationView를 선택했다가 Navigation Bar의 Height가 조절되지 않는 점이 마음에 들지않아 고민하게 되었다.
+- 화면 전환 방식에 있어서 present냐, push냐를 선택해야 했다. ViewController에서도 push (가로)로 화면 전환이 가능할 것이라 생각했는데 push NavigaionController에만 있는 메서드였다. ViewController에는 present 메서드만 제공되고 있었다.
