--- a/_posts/til/2020-11/2020-11-26-til.md
+++ b/_posts/til/2020-11/2020-11-26-til.md
@@ -1,8 +1,229 @@
 ---
 layout: post
-title: 201126
+title: 201126-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
+# 학습 내용
+ 수업 시간에 싱글톤, 프로토콜, 델리게이션에 대해서 공부하고, 어제 받은 코드리뷰를 토대로 코드 수정을 했다. singleton, protocol, delegation, static, outlet collection, array, wildcard, tag 등 다양한 키워드를 접하는 날이었다. 
+
+#### Collection
+- Collection은 ‘집단 자료’로 서로 관련이 있는 데이터를 모아서 관리하는 기능을 한다.
+- Array(배열), Dictionary(딕셔너리), Set(집합) 등이 있다.
+- 값을 열람할 때에는 항상 nil일 수도 있다는 점을 염두해두어야 한다.
+
+- Array
+    - 배열, 같은 타입의 값을 나열한다.
+    - 배열 속의 각 아이템들은 Index를 가지기 때문에 순서가 있는 나열이 필요할 때 유용하다.
+    - 인덱스는 0부터 시작된다.
+```swift
+// 선언 및 초기화
+var array1: [Int] // 선언
+var array2: Array<Int> // 선언
+var array3 = [Int]() // 선언 + 초기화
+var array4 = Array<Int>() // 선언 + 초기화
+var array5: [String] = Array() // 선언 + 초기화
+
+var numbers: [Int] = [1,2,3]
+
+// 추가하기
+numbers.append(4)
+numbers.append(contentsOf: [5, 6])
+numbers += [7, 8]
+
+// Array 카운트하기
+numbers.count
+
+// 비어있는지 확인, 값은 bool 타입으로.
+numbers.isEmpty
+
+// 첫번째 인덱스
+// second부터는 없으므로 인덱스를 이용해야 한다.
+numbers.first
+// array가 비어 있을 수도 있기때문에 옵셔널 값이 된다.
+print(numbers.first!)
+
+// 최소, 최대
+numbers.min()
+numbers.max()
+
+// 특정 인덱스의 값
+numbers[3]
+
+// array에 특정값이 있는지 확인하기
+numbers.contains(4)
+
+// 새로운 값을 원하는 곳에 삽입하기
+numbers.insert(97, at: 2)
+
+// 삭제하기
+numbers.remove(at: 2)
+
+// 특정 인덱스 업데이트하기
+numbers[4] = 99
+numbers[1...3] = [10, 11, 12]
+
+// 순서대로 출력하기
+for num in numbers {
+    print(num)
+}
+
+// index와 함께 출력하기
+for (index, num) in numbers.enumerated() {
+    print("Index: \(index), value: \(num)")
+}
+```
+
+- Dictionary
+    - Key와 Value 값으로 이루어져 있다. 말그대로 사전과 유사하다.
+    - Array와  다르게 순서가 없다. Index대신 Key값으로 원하는 값을 찾을 수 있다.
+```SWIFT
+선언 및 초기화
+var dictionary1: [String: Int]
+var dictionary2: Dictionary<String, Int>
+var dictionary3 = [String: Int]()
+var dictionary4 = [Dictionary<String, Int>]()
+
+기능
+var scoreDic: [String: Int] = ["Bin": 90, "Jimmy": 30, "Ken": 65]
+
+// Key값으로 검색하기. 없는 값 입력하면 nil
+scoreDic["Bin"]
+scoreDic["Jason"] // nil
+
+// 딕셔너리 값을 열람할 때에는, 값이 항상 nil일 수도 있다는 점을 유의해야 한다.
+if let score = scoreDic["Jason"] {
+    score
+} else {
+    print("원하시는 정보가 없습니다.")
+}
+
+// 비어있는지 확인하기
+scoreDic.isEmpty
+
+// Dictionary 카운트하기
+scoreDic.count
+
+// 값 업데이트
+scoreDic["Bin"] = 100
+
+// 딕셔너리 추가
+scoreDic["Alex"] = 85
+
+// 딕셔너리 제거
+scoreDic["Ken"] = nil
+
+// For loop
+for (name, score) in scoreDic {
+    print("\(name), \(score)")
+}
+
+// key 값만 뽑기
+for key in scoreDic.keys {
+    print(key)
+}
+```
+
+- Set
+    - 집합, 순서가 없고 유일한 값을 가지는 타입이다.
+    - 유일한 값을 가진다는 말은, 같은 값을 중복해서 넣을 경우 중복으로 처리된다는 말이다.
+    
+```SWIFT
+// 선언 및 초기화, 이때 Set임을 분명하게 명시해주지 않으면 Array로 오해받는 경우가 생긴다.
+var set: [Int] // array로 오해받음.
+var set: Set<Int> // 이렇게 set임을 명시해주어야 한다.
+
+var someSet: Set<Int> = [1, 2, 3, 1]
+
+// 비어있는지 확인하기
+someSet.isEmpty
+
+// 카운트하기
+someSet.count
+
+// 원하는 값이 있는지 확인하기, Bool 값으로 처리
+someSet.contains(4)
+someSet.contains(1)
+
+// 추가하기
+someSet.insert(5)
+
+// 삭제하기
+someSet.remove(1)
+```
+Array와 달리 인덱스가 없기 때문에 Array 기능 중에 인덱스를 이용하는 기능을 제외한 기능들을 수행할 수 있다.
+
+<br>
+
+# 고민한 점 / 해결 방법
+
+#### Xcode, image scale
+- Xcode에 이미지파일을 불러오면 이미지의 사이즈는 x1, x2, x3로 분류된다. 어떤 의미를 가질까?
+- 디지털로 제공되는 모든 시각정보는 pixel 단위로 제공된다. 우리가 보는 화면도, 사진도 마찬가지이다. 1pixel은 정사각형 하나로 구성되어있으며 수많은 픽셀들이 모여 이미지를 이룬다. 많은 픽셀로 구성될수록 이미지의 사이즈가 커지는데 같은 사이즈에서 비교하자면 더 많은 픽셀로 이루어진 이미지가 더 오밀조밀하게, 디테일하게 표현되어 있다. 소위 화질이 좋다는 말을 쓴다.
+- 컴퓨터에서 사이즈를 나타내는 단위는 대표적으로 point(pt)와 pixel(px)가 있다. pt는 1pt = 1/72 인치라는 절대적인 값을 나타내고, px는 모니터의 해상도, 크기에 따른 상대적인 값을 나타낸다. 
+- WINDOW에서는 9pt = 12px, MAC에서 9pt = 9px인데, WINDOW에서 화면 해상도는  96dpi를 사용하지만, MAC에서의 화면 해상도는 72 dpi를 사용하기 때문이다.
+    - 1x = 10 * 10 px, 표준 배율, 1pt에 1px
+    - 2x = 20 * 20 px, 표준 배율의 4배, 1pt에 4px
+    - 3x = 30 * 30 px, 표준 배율의 9배, 1pt에 9px
+
+#### 왜 여러개의 사이즈를 쓸까?
+- 날이 갈수록 고해상도의 디스플레이가 만들어지고 있다. 고해상도라는 1인치에 들어가는 픽셀의 수가 많은 것을 의미한다.
+- 과거의 애플 기기는 1pt = 1px, 즉 1x 사이즈의 이미지를 사용했으나 레티나가 등장하면서 2x 사이즈의 이미지가 필요해졌고, 또 다시 레티나 HD가 나오면서 3x 사이즈의 이미지가 필요하게 되었다.
+
+#### 그냥 고해상도의 이미지만 쓰면 되지 않을까?
+- ‘화질은 좋을 수록 좋다’는 말은 여기에는 해당되지 않는 말인 것 같다.
+- 낮은 품질의 이미지는 당연히 억지로 사이즈를 키울 수 없다. 하지만 반대의 경우에는 약간의 의문이 생기는데, 반대의 경우 사이즈를 줄이게 되면 넘치는 픽셀을 어떻게 없애느냐에 대한 문제가 생기게 된다. 컴퓨터가 임의로 픽셀을 생략하거나 합쳐버리게 되면 의도했던 이미지를 얻을 수 없을지도 모른다.
+- 무엇보다 이미지의 사이즈를 굳이 나눠서 쓰는 이유는 메모리와 디스크의 효율적인 사용을 통해 성능을 향상시키는데에 목적이 있다.
+
+
+#### Outlet Collection? UIView tag?
+- Outlet Collection을 어떻게 쓰는 것인지 한참을 해멨다. 
+- IBOutlet을 묶어는 두었으나, 각각의 outlet에 어떻게 값을 할당해주어야 하는지가 잘 해결되지 않았다. IBAction에서처럼 tag로 접근해보려니 어떤 코드로 tag에 접근할 수 있는지 도통 못찾겠다.  
+- 무엇을 보아야할지 한참을 고민하고는 Array의 인덱스로 접근하는 방법을 찾게 되었다. 생각보다 간단해서 조금 허탈했다.
+```siwft
+        imgView[0].image = UIImage(named: "딸기")
+        imgView[1].image = UIImage(named: "바나나")
+        imgView[2].image = UIImage(named: "파인애플")
+        imgView[3].image = UIImage(named: "키위")
+        imgView[4].image = UIImage(named: "망고")
+        
+        fruitLabel[0].text = "strawberry"
+        fruitLabel[1].text = "banana"
+        fruitLabel[2].text = "pinapple"
+        fruitLabel[3].text = "kiwi"
+        fruitLabel[4].text = "mango"
+```
+
+- 하지만 이 방법이 맞는지, 맞다는 가정하에 좋은 방법인지에 대해서는 의문이 들었다. 어떤 뷰의 인덱스가 1번인지, 아니라면 몇번인지 알기가 힘들었고, 기획이 변경되어 중간즈음의 이미지나 레이블이 삭제될 경우 많은 인덱스들을 손수 수정해주어야 했다.
+- 보통 for 문으로 사용하는 예시들을 찾을 수 있었는데, 서로 다른 이미지나 텍스트를 넣어야할 경우에는 부적합할지도 모르겠다. 같은 내용의 이미지나 레이블이 사용되는 경우에는 유용하게 쓰일 것 같다.
+- UIView tag는 또 어디 쓸 수 있을까..
+
+<br>
+
+# 느낀점
+ - 조금은 벅찬 하루를 보냈다. 수업 내용도 쉽지 않았고, 리뷰에 대해서 고민하고 공부하는데에 많은 시간이 필요했다. 특히 Outlet Collection에 대해서 서칭할때에는 찾은 코드가 Objective-C 코드인지도 모르고 오랜시간 삽질을 했다는게 충격적이었다. 어쩐지 괴상하게 생겼더라. 지친 상태에서 배열에 대해 공부해보고, 인덱스로  접근하는 방법을 찾았을 때에는 뭐라도 했다는 기분에 너무 기뻤다. 비록 알맞는 코드는 아니겠지만. 수업시간에 배운 싱글톤, 프로토콜, 델리게이션은 내일 복습해보자..!!
+
+
+
+#### 참고 링크
+- Outlet Collection
+https://hyerios.tistory.com/104
+https://www.youtube.com/watch?v=NdWPj61wl7g
+
+- UIView, tag 
+https://developer.apple.com/documentation/uikit/uiview
+https://jiseobkim.github.io/swift/2018/11/04/swift-Tag.html
+
+https://stackoverflow.com/questions/47885040/register-form-with-outlet-collection-and-tags
+
+
+
+- image scale 1x, 2x, 3x
+https://developer.apple.com/design/human-interface-guidelines/ios/icons-and-images/image-size-and-resolution/
+https://learnappmaking.com/image-scaling-ios-how-to/
+
+- pt? px? 
+https://m.blog.naver.com/PostView.nhn?blogId=yuzin22&logNo=90036587979&proxyReferer=https:%2F%2Fzeddios.tistory.com%2F6
+https://zeddios.tistory.com/26
