--- a/_posts/til/2020-11/2020-11-30-til.md
+++ b/_posts/til/2020-11/2020-11-30-til.md
@@ -1,8 +1,81 @@
 ---
 layout: post
-title: 201130
+title: 201130-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
 ---
+# 학습 내용
+ 클래스의 상속에 대해 공부하고 수업시간에 UML을 공부하고 직접 작성해보았다. 오늘은 특별히 리뷰어 ‘흰’이 직접 강의를 해주었는데 열심히 준비해주셔서, 또 좋은 강의를 들려주셔서 너무 감사했다. 그리고 꼬말과 팀룰을 정하고 회원가입 프로젝트를 진행했다.
+ 오전에는 Bam과 Sole이 직접 코드 리뷰를 해주었다.
+
+#### 클래스의 상속
+- 상속은 클래스의 기능을 그대로 물려주는 것이다.
+- 클래스에만 있는 기능, 구조체와 열거형에는 없다.
+- 물려’주는’ 클래스: 부모 클래스, 상위 클래스, 슈퍼 클래스, 기본 클래스, 조상 클래스
+- 물려’받는’ 클래스: 자식 클래스, 하위 클래스, 서브 클래스, 파생 클래스, 후손 클래스
+- 상위에 있는 클래스일 수록 좋아보이지만(?) 실제로는 구현된 기능의 폭이 가장 좁다.
+- override 키워드를 써서 자식 클래슥가 부모 클래스의 기능을 변경해줄 수 있다. 하지만 파라미터가 있을 경우, 파라미터 부분은 재정의할 수 없다. 파라미터의 구성이 다를 경우 온전히 다른 메서드로 간주되기 때문이다.
+- 프로퍼티를 override할 때에는 무조건 get, set을 모두 제공하는 연산 프로퍼티로 오버라이딩해야 한다.
+- final 키워드를 쓰면 오버라이딩을 막을 수 있다. 즉 오버라이딩이 불가능한 프로퍼티, 메서드가 된다.
+
+#### 상속의 규칙
+- 자식 클래스는 하나의 부모 클래스만 상속받을 수 있다.
+- 부모 클래스는 여러 개의 자식 클래스를 가질 수 있다.
+- 상속의 깊이는 상관이 없다.
+
+#### UML
+- Unified Modeling Language, 통합 모델링 언어
+- 모델링 언어란? 소프트웨어의 밑그림을 어떻게 그릴지 정의하는 규칙들의 집합, 혹은 그러한 방식
+
+#### UML 왜 필요할까?
+- 도식화에는 강력한 힘이 있다.
+- 사람마다 도식화하는 방식이 다를 것이고, 그 방법은 아주아주 많을 것이다.
+- 아주 다양한 도식화를 양식화해둔 것이 UML이다.
+- 결국 의사소통을 위한 것이다.
+
+#### 표준화된 ‘방식’이라면서, 왜 언어라고 부르지?
+- 언어는 문자가 아니라 소통의 방식을 말하고, 또 그것을 구체적으로 구조화해둔 것을 말한다.
+- 보다 넓은 의미로서 ‘언어’를 이해하자.
+
+#### UML을 사용하는 유형, 누구와 의사소통을?
+- 나 자신 -> 전체 구조 및 클래스 의존성 파악
+- 같이 일하는 사람 -> 의사소통 및 설계 논의 (꼭 개발자가 아니더라도 소통이 필요한 여러 분야의 사람들이 있다.)
+- 미래에 이 프로그램을 맡을 사람(나 포함) -> 문서화
+
+- 내가 짠 코드의 구조를 생각해보고, 동작 순서 혹은 방식 등을 파악하기 용이하다.
+
+#### UML Diagram Types
+- diagram은 수식관계를 그림으로 표현한 것을 말한다.
+- Structural Diagrams와 Behavioral Diagrams가 있다. (구조 다이어그램 / 행위 다이어그램)
+- 대표적으로 구조 다이어그램에는 클래스 다이어그램, 행위 다이어그램에는 시퀀스 다이어그램이 있다.
+- 클래스 다이어그램은 클래스 간의 관계를 명확히 파악할 수 있으며 의존관계에 대한 파악이 가능하다.
+- 시퀀스 다이어그램은 시간 순으로 나타낸 다이어그램이다.
+
+#### UML, 관계
+- 상속관계일 때, 빈 화살표가 상위클래스를 향한다.
+- 집약관계는 전체 객체가 사라지더라도, 부분 객체가 메모리에서 사라지지않는 관계
+- 합성관계는 전체 객체와 부분객체의 라이프 타임이 의존적인 관계
+
+<br>
+
+# 고민한 점 / 해결 방법
+#### UML, 의존관계? 집합관계?
+- 관계를 정확하게 잘라서  정의할 수는 없었다. 참 애매하다. 
+
+<br>
+
+# 느낀점
+ Bam과 Sole의 코드 리뷰를 보며 내가 모르는 키워드가 심심치않게 등장해서 신기했다. 수업이 끝나고는 꼬말과 프로젝트에 대해 이야기를 나누었는데, 결과적으로 10줄 정도되는 코드를 작성했지만 굉장히 다양한 고민들이 공유되었다. 단단해지고 있는 모양이다. 기분이 좋다.
+
+- 주고 받은 고민 키워드
+- 네이밍
+- 싱글톤 써야할까?
+- 값 타입 vs 참조 타입
+- 클래스의 옵셔널 프로퍼티
+- 인스턴스 생성 위치
+- 파라미터
+- 프로퍼티의 타입
+
+
