--- a/_posts/til/2020-11/2020-11-17-til.md
+++ b/_posts/til/2020-11/2020-11-17-til.md
@@ -1,9 +1,85 @@
 ---
 layout: post
-title: 201117
+title: 201117-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 
 tags: [til]
 comments: true
 ---
+# 학습 내용
+ JuiceMaker 만들기 STEP1을 진행했다.
+
+#### 연산 프로퍼티
+프로퍼티에도 종류가 몇가지 있었다. 저장 프로퍼티, 연산 프로퍼티, 타입 프로퍼티, 지연 저장 프로퍼티 등. ‘읽기 전용’ 프로퍼티를 구현하기 위해서는 연산 프로퍼티에 대한 이해가 필요했다.
+get만 제공하면 읽기 전용 프로퍼티가 되고, set까지 제공하면 읽기, 쓰기가 가능한 프로퍼티가 된다.
+get, set은 var(변수)에만 제공될 수 있는 기능이다.
+클래스, 구조체, 열거형 모두에서 사용이 가능하다.
+연산 프로퍼티는 관계에서 얻어지는 값, 의존적인 값을 가지는 프로퍼티이다.
+
+#### In-Out Parameters
+프로젝트에서 헤매다가 알게된 파라미터이다. 제대로 쓴 것인지는 모르겠다.
+파라미터는 기본적으로 let(상수)로 선언이 되기 때문에 함수나 메서드 내부에서 값을 변경하는 것이 불가능하다. 이러한 경우 In-Out 파라미터를 사용할 수 있다.
+공식 문서의 서로의 값을 바꾸어주는(switch) 예시가 있었다. 이러한 맥락으로 많이 쓰이나 보다.
+
+<br>
+
+
+# 고민한 점 / 해결 방법
+####  연산 프로퍼티, 읽기 전용 프로퍼티를 왜 사용할까?
+변수를 설정하고, 접근제어를 하거나 변수를 가지고 직접 연산을 해주어도 연산 프로퍼티의 기능은 충분히 보완되지 않을까? 왜 굳이 하나의 개념을 더 만들어야 했을까.
+읽기 전용 프로퍼티가 있는 이유는, 변수가 실수로 수정되는 것을 방지하기 위함이 아닐까 생각해보았다. 
+명쾌하게 답이 나오지는 않았다. 코드를 계속 써보면서 알아가보아야겠다.
+
+#### 구조체와 클래스는 무엇을 언제 쓰면 좋을까?
+구조체와 클래스를 공부해보았지만 실사용의 용도를 어떻게 구분해야할지 감이 잡히질 않았다. 
+
+- 구조체와 클래스의 공통점
+    - 프로퍼티와 메소드를 가진다.
+    - extension이 가능하다.
+    - 프로토콜을 구현할 수 있다.
+    - 네이밍할 때, 첫 글자는 대문자로 한다.
+    - 서브스크립트를 정의할 수 있다.
+    - 초기화 블록을 정의할 수 있다.
+
+- 구조체와 클래스의 차이점
+    - 구조체는 값 타입, 클래스는 참조 타입
+    - memberwise 기능의 유무 (구조체에만 있는 기능), 클래스는 내부적으로 init(초기화)구문이 필수
+    - 클래스는 상속과 타입 캐스팅이 가능하다.
+    - 구조체에서는 mutating이 가능하다. 
+    - swift의 Int, String 등과 같은 큰 뼈대는 구조체이다.
+    - Foundation, UIKit과 같은 프레임워크 등은 계층관계가 있는 클래스로 구성되어 있다.
+
+- 메모리
+    - 구조체와 클래스는 생성되는 인스턴스가 할당되는 메모리 공간의 차이가 있다.
+    - 구조체는 Stack에, 클래스는 Heap에 생성된다. (무슨 말이지.)
+    - Stack에 생성되는 구조체는 효율적이고 빠르다.
+    - Heap에 생성되는 클래스는 보다 큰 메모리 풀을 가지고 있으며 Stack보다는 느리다.
+
+- 구조체를 사용하면 좋은 경우
+    - 서로 연관된 몇 개의 기본 데이터 타이들을 캡슐화하여 묶는 것이 목적일 때
+    - 캡슐화된 데이터에 상속이 필요하지 않을 때
+    - 캡슐화된 데이터를 전달하거나 할당하는 과정에서 참조 방식보다는 값이 복사되는 것이 합리적일 때
+    - 캡슐화된 원본 데이터를 보존해야 할 떄
+
+- 클래스를 사용하면 좋은 경우
+    -  하나의 캡슐화된 데이터를 참조해야할 때
+    - 하나의 객체가 필요하고, 여러 대상에 의해 접근되고 변경이 필요한 경우
+
+<br>
+
+# 느낀점
+- 코드를 보다 많이 작성해보아야겠다는 생각이 들었다. 글로서는 이해되는 것들이 실제로 코드를 쓰는 과정에서는 감이 안잡힐 정도로 와닿지가 않았다. 마치 농구 드리블을 글로만 배운 느낌이 들었다. 아직도 클래스와 구조체, 연산 프로퍼티 등의 개념들이 실제 사용에서는 어떤 용도에 들어맞는 것들인지는 명쾌하지 못한 것 같다.
+
+
+
+
+#### 참고한 링크
+- 프로퍼티
+[http://seorenn.blogspot.com/2014/06/swift-properties.html](http://seorenn.blogspot.com/2014/06/swift-properties.html)
+
+- 구조체와 클래스
+[https://shark-sea.kr/m/entry/Swift-구조체와-클래스-차이-struct-vs-class](https://shark-sea.kr/m/entry/Swift-구조체와-클래스-차이-struct-vs-class)
+
+
+
