--- a/_posts/til/2020-12/2020-12-04-til.md
+++ b/_posts/til/2020-12/2020-12-04-til.md
@@ -17,13 +17,13 @@ comments: true
 <br>
 
 # 고민한 점 / 해결 방법
-#### 버튼 활성화를 검증하는 메서드, 언제 호출해야할까
+#### 버튼 활성화를 검증하는 메서드, 언제 호출해야할까?
 - 버튼을 활성화시키는데에는 몇 가지 조건이 필요했다. 사용자가 모든 텍스트와 이미지를 채워넣어야하고, 패스워드를 체크해서 일치하, 조건이었는데 이 조건을 언제 검증을 해야할지에 대한 고민이 있었다.
 - 사용자의 입장에서는 당연히 입력 매순간마다 반응하여, 충족시 즉각적으로 버튼이 활성화되는 것이 편할 것이라고 생각했다. 하지만 이렇게 매순간마다 검증하는 메서드를 호출하게 된다면 메서드 호출을 너무 남발하게 되는 것이 아닐까?
 - 고민 끝에 리뷰어 붱이를 찾아갔다. 붱이가 나의 고민을 정리해주었는데 나는 성능과 사용자의 편의성 사이에서 고민을 하고 있는 것이라고 말해주었다. 결과적으로 메서드를 매번 호출하는 것이 성능적으로 그렇게 무리한 요구가 아니라고 판단했고, 사용자의 편의성에 더 힘을 싣는 것이 좋겠다고 생각했다.
 - 덧붙여서 붱이는 '개발자는 저울질을 할 수 있어야 한다. 그리고 스스로 그 기준을 만들줄 알아야한다.' 라는 말을 해주었다. 무엇이든 동시에 모든 것을 취할 수는 없는 것 같다. 멋진 말이다.
 
-#### textView의 키보드를 어떤 방식으로 내릴 수 있을까
+#### textView의 키보드를 어떤 방식으로 내릴 수 있을까?
 - 자기소개를 입력하는 textView에서는 리턴버튼을 엔터로 활용을 해야한다고 판단했다. 그러면 키보드를 내리는 방식이 빈화면을 터치하는 것인데, 이 경우 빈 화면이 매우 협소하여 불편하지 않을까?
 - 처음에 내린 결론은 스크린을 아래로 쓸어내리면(슬라이드?) 키보드가 내려가게 구현하면 어떨까
 - 캠퍼들의 TIL을 읽어보던 중 jake가 keyboardAccessory에 Done버튼을 추가해주었다는 내용을 보고 Done버튼을 추가하는 방향으로 프로젝트를 진행했다.
