TIL 코드블록 수정

--- a/_posts/til/2020-11/2020-11-25-til.md
+++ b/_posts/til/2020-11/2020-11-25-til.md
@@ -65,10 +65,12 @@ let 엄마폰: 핸드폰 = 아이폰() // 핸드폰 프로토콜을 타입으로
 엄마폰이 사용가능한 기능 혹은 프로퍼티
 엄마폰.전화()
 엄마폰.메세지()
+```
 
 이렇게 구조체와 클래스 타입이 아니라 프로토콜 타입으로 할당받을 수 있다. 단, 당연히 프로토콜을 완전하게 구현한 상태여야 한다. 
 
 프로토콜 여러개를 타입으로 할당받고 싶다면 & 기호를 사용할 수 있다. 
+```swift
 protocol A { } 
 protocol B { } 
 var something: A & B = <class or struct>() 
