--- a/_posts/til/2020-11/2020-11-26-til.md
+++ b/_posts/til/2020-11/2020-11-26-til.md
@@ -18,7 +18,7 @@ comments: true
     - 배열, 같은 타입의 값을 나열한다.
     - 배열 속의 각 아이템들은 Index를 가지기 때문에 순서가 있는 나열이 필요할 때 유용하다.
     - 인덱스는 0부터 시작된다.
-```swift
+```SWIFT
 // 선언 및 초기화
 var array1: [Int] // 선언
 var array2: Array<Int> // 선언
