--- a/_posts/til/2020-11/2020-11-25-til.md
+++ b/_posts/til/2020-11/2020-11-25-til.md
@@ -35,7 +35,7 @@ comments: true
 구조체에서는 멤버와이즈 기능을 제공하지만 프로토콜에서 초기화 메서드를 선언했다면 멤버와이즈 기능과 상관없이 초기화 메서드를 다시 구현해주어야 한다. 
 
 - 타입으로서의 프로토콜
-```SWIFT
+```swift
 protocol 핸드폰 {
     전화()
     메세지()
@@ -69,7 +69,7 @@ let 엄마폰: 핸드폰 = 아이폰() // 핸드폰 프로토콜을 타입으로
 
 이렇게 구조체와 클래스 타입이 아니라 프로토콜 타입으로 할당받을 수 있다. 단, 당연히 프로토콜을 완전하게 구현한 상태여야 한다. 
 
-프로토콜 여러개를 타입으로 할당받고 싶다면 & 기호를 사용할 수 있다. 
+프로토콜 여러개를 타입으로 할당받고 싶다면 & 기호를 사용할 수 있다.  
 ```swift
 protocol A { } 
 protocol B { } 
