--- a/_posts/til/2020-11/2020-11-26-til.md
+++ b/_posts/til/2020-11/2020-11-26-til.md
@@ -18,7 +18,7 @@ comments: true
     - 배열, 같은 타입의 값을 나열한다.
     - 배열 속의 각 아이템들은 Index를 가지기 때문에 순서가 있는 나열이 필요할 때 유용하다.
     - 인덱스는 0부터 시작된다.
-```SWIFT
+```swift
 // 선언 및 초기화
 var array1: [Int] // 선언
 var array2: Array<Int> // 선언
@@ -79,7 +79,7 @@ for (index, num) in numbers.enumerated() {
 - Dictionary
     - Key와 Value 값으로 이루어져 있다. 말그대로 사전과 유사하다.
     - Array와  다르게 순서가 없다. Index대신 Key값으로 원하는 값을 찾을 수 있다.
-```SWIFT
+```swift
 선언 및 초기화
 var dictionary1: [String: Int]
 var dictionary2: Dictionary<String, Int>
@@ -130,7 +130,7 @@ for key in scoreDic.keys {
     - 집합, 순서가 없고 유일한 값을 가지는 타입이다.
     - 유일한 값을 가진다는 말은, 같은 값을 중복해서 넣을 경우 중복으로 처리된다는 말이다.
     
-```SWIFT
+```swift
 // 선언 및 초기화, 이때 Set임을 분명하게 명시해주지 않으면 Array로 오해받는 경우가 생긴다.
 var set: [Int] // array로 오해받음.
 var set: Set<Int> // 이렇게 set임을 명시해주어야 한다.
