--- a/_posts/til/2020-11/2020-11-24-til.md
+++ b/_posts/til/2020-11/2020-11-24-til.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 201124-TIL
+category: til
 permalink: /til/:year/:month/:day/:title/
 tags: [til]
 comments: true
@@ -19,7 +20,8 @@ comments: true
 - chore: 기타 모든 변경, 빌드 업무 수정, 패키지 매니저 설정 등 위에 해당하지 않는 모든 변꼉 (제품 코드 수정 없음)
 
 #### 화면 전환 코드
-```
+
+```swift
         let secondView = self.storyboard!.instantiateViewController(identifier: "SecondVC")
         secondView.modalTransitionStyle = .coverVertical
         present(secondView, animated: true)
