--- a/_posts/til/2020-11/2020-11-27-til.md
+++ b/_posts/til/2020-11/2020-11-27-til.md
@@ -20,7 +20,8 @@ comments: true
 - 기능의 요구사항, 프로그래밍에는 interface라는 개념이 있는데 스위프트에서는 이를 **프로토콜**문법으로 구현한다.
 - Flyable, Walkable, Makeable 등과 같이 ‘~을 할 수 있다.’, ‘~ 역할을 수행한다.’는 뉘앙스로 네이밍을 한다.
 - 프로토콜을 사용하면 결합도를 낮추어, 인스턴스 간의 의존성을 제거할 수 있다. 다음 예시를 보자.   
-```
+
+```swift
 protocol Makeable {
     func makeSth(withRecipe: String)
 }
@@ -53,6 +54,7 @@ coffeeShop.maker.makeSth(withRecipe : "아메리카노")
 let juiceShop = Shop(maker: JuiceMaker())
 juiceShop.maker.makeSth(withRecipe: "오렌지쥬스")
 ```
+
 - shop의 maker프로퍼티를 프로토콜 Makeable 타입으로 선언해두면, 가게의 종목이 변경되더라도 maker(직원)만 변경을 해주는 방식으로 코드를 유지보수할 수 있다.
 - 만약 Makeable이라는 프로토콜없이 정의하고, 추후에 가게 종목을 바꾸기 위해서는 coffeeshop과 juiceshop 클래스를 따로 만들어야하는 번거로움이 생긴다.
 - 이러한 케이스로 프로토콜이 사용될 때에는 프로토콜은 ‘자격증’과 같은 것으로 이해가 되었다. 쥬스 자격증이 있는 사람, 커피 자격증이 있는 사람, 혹은 포토샵 자격증이 있는사람, 운전 면허증이 있는 사람 등 특수한 능력을 검증하는 자격증말이다.
@@ -61,7 +63,8 @@ juiceShop.maker.makeSth(withRecipe: "오렌지쥬스")
 #### 델리게이션
 - 사장과 비서의 개념
 - 사장이 비서에게 일을 시키기위해서는 어떤 사전 약속이 필요하다. 그것을 protocol로 미리 구현해두는 것을 delegation으로 이해할 수 있다.   
-```
+
+```siwft
 protocol Assistant {
     func manageSchdule()
     func sayHello()
@@ -70,6 +73,7 @@ protocol Assistant {
     var typingSpeed: Int { get }
 }
 ```
+
 - delegate는 ‘위임하다’라는 말인데, 말 그대로 어떠한 역할을 위임하는 것이다. 중앙에서 모든 일을 집중적으로 해내는 것은 굉장히 비효율적이다. 따라서 위임을 통해 일을 분산시키는 역할을 하는 것으로 이해된다.
 - iOS에는 수많은 비서가 존재한다. 예를들어 UITextFieldDelegate 등이 있다. 
 - iOS에는 이미 수많은 delegate가 프로토콜의 형태로 정의되어 있다. 우리는 이것들을 가져다가 써주기만 하면 된다. 
@@ -83,7 +87,8 @@ protocol Assistant {
 #### maker, 프로토콜을 타입으로 선언한 프로퍼티?
 - 수요일에 프로토콜에 대해 공부할 때 프로토콜을 타입으로서 사용할 수 있었다. 위의 Shop 클래스의 var maker: Makeable 의 경우가 프로토콜 타입의 프로퍼티를 생성한 경우가 된다. 
 - 지난 수요일의 공부에 따르면 타입으로서 프로토콜을 사용하게 되면, 프로토콜 내부에서 구현한 프로퍼티, 메서드만 사용할 수 있다. 예를 들어   
-```
+
+```swfit
 protocol Makeable {
     func makeSth(withRecipe: String)
 }
@@ -109,13 +114,15 @@ let coffeeShop = Shop(maker: CoffeeMaker())
 coffeeShop.maker.makeSth(withRecipe : "아메리카노")
 coffeeShop.maker.sayHello() // error: Value of type 'Makeable' has no member ‘sayHello'
 ```
+
 - 이렇게 CoffeeMaker 클래스에 프로토콜에 없는 메서드를 추가하여, Makeable 타입의 maker로서 불러오게 되면, Makeable 프로토콜에서는 정의하지 않았던 sayHello  메서드를 사용할 수 없었다.
 - 따라서 이렇게 프로토콜을 타입으로 사용하는 경우에는 ‘공장처럼’ 정형화된 인스턴스를 찍어내고, 돌려쓸때 유용할 것 같다. (프로그래밍의 세계는 참 냉정하다!) 
 
 
 #### 프로토콜없이 Shop클래스의 프로퍼티인 maker를 Anyobject 타입으로 만들면 안될까?
 - Anyobject 타입으로 만들어서 프로토콜없이 구현했을때 JuiceShop과 CoffeeShop을 따로 만들어야 하는 번거로움을 없앨 수 있을까싶어서 시도해보았다.   
-```
+
+```swift
 class Shop {
     var maker: AnyObject
 
@@ -127,9 +134,11 @@ class Shop {
 let juiceShop = Shop(maker: JuiceMaker())
 juiceShop.maker.makeSth(withRecipe: "오렌지쥬스") // error: Value of type 'AnyObject' has no member 'makeSth'
 ```
+
 - maker에 JuiceMaker를 할당하는 것까지는 문제가 없는데, 그 후 maker의 메서드를 불러오는데에서 에러가 발생했다.
 - Anyobject 공식 문서의 예제를 참고하여 비슷한 시도를 해보았는데 역시 y프로퍼티의 value에는 접근할 수 없었다.   
-```
+
+```swift
 class FloatRef {
     let value: Float
     init(_ value: Float) {
