--- a/_posts/swift/2020-12-08-비트연산자.md
+++ b/_posts/swift/2020-12-08-비트연산자.md
@@ -12,9 +12,9 @@ comments: true
 
 <br>
 
-#  NOT 비트단위 연산자 ( ~ )
-
-<img src = "/assets/post-img/swift/2012/bit1.png" width = "75%">   <br>  
+#  ✐ NOT 비트단위 연산자 ( ~ )
+<br>
+<img src = "/assets/post-img/swift/2012/bit1.png" width = "75%"> 
 
 &nbsp;NOT 비트단위 연산자는 숫자에 있는 모든 비트들을 **반전**시키는 연산자입니다. 각 자리의 비트가 반전된 (0은 1로, 1은 0으로) 이진수를 만들어냅니다. <br>
 
@@ -36,8 +36,9 @@ let binary1 = String(invertedBits, radix: 2) // -10000
 ```
 <br>
 
-# AND 비트단위 연산자 ( & )
-<img src = "/assets/post-img/swift/2012/bit2.png" width = "75%">   <br>
+# ✐ AND 비트단위 연산자 ( & )
+<br>
+<img src = "/assets/post-img/swift/2012/bit2.png" width = "75%">  
 
 &nbsp;AND 비트단위 연산자는 두 숫자들의 비트를 결합합니다. **입력한 두 숫자가 모두 1로 동일한 경우**에만 결과로 반환합니다. <br>
 
@@ -49,8 +50,10 @@ let middleFourBits = firstSixBits & lastSixBits // 60
 
 let binary2 = String(middleFourBits, radix: 2) // 111100
 ```
+
 <br>
 #### + NAND 비트단위 연산자 ( ~ ( & ) )
+
 ```siwft
 // NAND 비트단위 연산자
 let firstSixBits: UInt8 = 0b11111100
@@ -61,8 +64,9 @@ let binary2 = String(middleFourBits, radix: 2) // 11000011
 ```
 <br>
 
-# OR 비트단위 연산자 ( | )
-<img src = "/assets/bit3.png" width = "70%">   <br>
+# ✐ OR 비트단위 연산자 ( | )
+<br>
+<img src = "/assets/post-img/swift/2012/bit3.png" width = "70%"> 
 
 &nbsp;OR 비트단위 연산자는 입력된 숫자들의 비트에서 **하나라도 1인 경우**, 1을 반환하는 비트 연산자입니다. <br>
 
@@ -73,9 +77,11 @@ let moreBits: UInt8 = 0b01011110 // 94
 let combinedBits = someBits | moreBits // 254
 
 let binary3 = String(combinedBits, radix: 2) // 11111110
-```   
+```
+
 <br>
 #### + NOR 비트단위 연산자 ( ~ ( | ) )
+
 ```siwft
 // NOR 비트단위 연산자
 let someBits: UInt8 = 0b10110010 // 178
@@ -87,8 +93,9 @@ let binary3 = String(combinedBits, radix: 2) // 1
 
 <br>
 
-# XOR 비트단위 연산자 ( ^ )
-<img src = "/assets/bit4.png" width = "70%"> <br>
+# ✐ XOR 비트단위 연산자 ( ^ )
+<br>
+<img src = "/assets/post-img/swift/2012/bit4.png" width = "70%"> 
 
 XOR 비트단위 연산자는 ‘베타적인 OR 연산자’라고도 합니다. 이 연산자는 입력된 비트가 다르면 1을 반환하고, 같으면 0을 반환하는 연산자입니다. <br>
 
@@ -103,10 +110,12 @@ let binary4 = String(outputBits, radix: 2) // 10001
 
 <br>
 
-# 비트단위 시프트 연산자 ( << / >> )
-<img src = "/assets/post-img/swift/2012/bit5.png" width = "70%">  <br>
+# ✐ 비트단위 시프트 연산자 ( << / >> )
+<br>
+<img src = "/assets/post-img/swift/2012/bit5.png" width = "70%">
 
 &nbsp;비트단위 시프트 연산자는 숫자에 있는 모든 비트를 특정 숫자만큼 이동시키는 연산자입니다. 비트단위 시프트 연산자는 숫자를 곱하거나 나누는 효과를 가지고 있는데요, **왼쪽으로 1칸 밀면 값은 2배가 되고, 오른쪽으로 1칸을 밀면 값은 절반**이 됩니다. 2진수의 원리를 이해한다면 당연한 결과일 것입니다.
+<br>
 
 ```
 // 비트단위 시프트 연산자
@@ -126,6 +135,8 @@ shiftBits >> 4 // 00000000
 ```   
 
 시프트 연산자에는 -의 값도 넣을 수 있습니다. 그러면 비트들이 반대로 이동하겠지요?
+<br>
+
 ```
 shiftBits << -1 // 00000110
 shiftBits << -2 // 00000011
@@ -134,33 +145,37 @@ shiftBits << -3 // 00000001
 
 <br>
 
-# 부호가 있는 정수형에 대한 시프트
-![bit6](/assets/post-img/swift/2012/bit6.png) <br>
+# ✐ 부호가 있는 정수형에 대한 시프트
+<br>
 
-&nbsp;먼저 이진수의 부호에 대해서 이해해야 합니다. 부호가 있는 이진수는 맨 앞자리에 부호를 결정하는 비트가 자리합니다. 따라서 Int8 비트 내부를 들여다보면 맨 앞자리(부호)의 비트를 제외하고 남은 7개의 비트로 정수를 표현하게 됩니다. 이때 Sign bit가 0이면 양수를, 1이면 음수를 의미합니다.
-부호를 추가하기 위해서 Sign bit에게 한 자리를 내어주는 것입니다. 그렇기 때문에 UInt8의 범위는 1~255이지만 Int8의 범위는 -128~127 가 되는 것이지요
+![bit6](/assets/post-img/swift/2012/bit6.png) 
 
-양의 정수를 저장하는 방법은 지금까지의 방법과 유사한데요, 음의 정수를 저장하는 경우에는 방식이 바뀝니다. <br>
+&nbsp;먼저 이진수의 부호에 대해서 이해해야 합니다. 부호가 있는 이진수는 맨 앞자리에 부호를 결정하는 비트가 자리합니다. 따라서 Int8 비트 내부를 들여다보면 맨 앞자리(부호)의 비트를 제외하고 남은 7개의 비트로 정수를 표현하게 됩니다. 이때 Sign bit가 0이면 양수를, 1이면 음수를 의미합니다.      
 
-![bit6](/assets/post-img/swift/2012/bit6_ntwd9mc78.png) <br>
+양의 정수를 저장하는 방법은 지금까지의 방법과 유사한데요, 음의 정수를 저장하는 경우에는 방식이 바뀝니다.
+<br>
+
+![bit6](/assets/post-img/swift/2012/bit6.png) 
 
 &nbsp;-4에 대한 Int8 비트 내부를 보면 이렇게 되어있는데요, Value bits의 정수에서 Sign bit 정수를 빼줌으로서 음수를 만들어냅니다. 즉, Value bits의 값 124에서 Sign bit (부호 비트)의 값 128을 빼주는 것입니다. (부호 비트는 8번째 자리이므로, 2의 7 제곱승이 됩니다.) 따라서
 `124 - 128 = -4` 라는 값을 만들어내는 것이지요. <br>
 
- &nbsp;이러한 방식을 2의 보수법 방식이라고 합니다. 컴퓨터는 실제로 뺄셈을 하지 못하기 때문에 ‘-‘기호를 사용하지 못하기 때문에 음수를 표현하기 위해서 2의 보수법을 사용합니다.
+ &nbsp;이러한 방식을 2의 보수법 방식이라고 합니다. 컴퓨터는 실제로 뺄셈을 하지 못하기 때문에 ‘-‘기호를 사용하지 못하기 때문에 음수를 표현하기 위해서 2의 보수법을 사용합니다.   
 
 >2의 보수(two's complement) 란 어떤 수를 커다란 2의 제곱수에서 뻬서 얻은 이진수이다. 2의 보수는 대부분의 산술연산에서 원래 숫자의 음수처럼 취급된다. 주어진 이진수보다 한 자리 높고 가장 높은 자리가 1이며 나머지가 0인 수에서 주어진 수를 빼서 얻은 수가 2의 보수이다. 혹은 주어진 이진수의 모든 자리의 숫자를 반전(0을 1로, 1을 0으로)시킨 뒤, 여기에 1을 더하면 2의 보수를 얻을 수 있다. - 위키피디아 -
 
 
 그렇다면 음의 정수의 이진법은 어떻게 덧셈을 수행할까요?
+<br>
 
-![bit8](/assets/post-img/swift/2012/bit8.png) <br>
+![bit8](/assets/post-img/swift/2012/bit8.png) 
 
-&nbsp;덧셈을 수행하는 방식은 동일합니다. 부호가 없는 이진법의 덧셈처럼 진행하고, 초과하는 자릿수에 대해서는 탈락시켜버립니다. 따라서 위의 연산을 수행하면 11111011 이 되겠네요 🙂
+&nbsp;덧셈을 수행하는 방식은 동일합니다. 부호가 없는 이진법의 덧셈처럼 진행하고, 초과하는 자릿수에 대해서는 탈락시켜버립니다. 따라서 위의 연산을 수행하면 11111011 이 되겠네요 🙂   
 
 그럼 본론으로, 2의 보수법에 대해서 시프트는 어떻게 적용될까요?
+<br>
 
-![bit9](/assets/post-img/swift/2012/bit9.png) <br>
+![bit9](/assets/post-img/swift/2012/bit9.png) 
 
 &nbsp;음수의 경우 오른쪽으로 밀되, 맨 앞자리에는 부호에 맞는 비트가 다시 자리를 차지하는 방식입니다. 따라서 부호없는 비트단위 시프트와 달리 맨 뒤의 비트를 탈락시키게 되는 것입니다.
 
