비트 연산자 수정

--- a/_posts/swift/2020-12-08-비트연산자.md
+++ b/_posts/swift/2020-12-08-비트연산자.md
@@ -160,7 +160,7 @@ shiftBits << -3 // 00000001
 &nbsp;-4에 대한 Int8 비트 내부를 보면 이렇게 되어있는데요, Value bits의 정수에서 Sign bit 정수를 빼줌으로서 음수를 만들어냅니다. 즉, Value bits의 값 124에서 Sign bit (부호 비트)의 값 128을 빼주는 것입니다. (부호 비트는 8번째 자리이므로, 2의 7 제곱승이 됩니다.) 따라서
 `124 - 128 = -4` 라는 값을 만들어내는 것이지요. <br>
 
- &nbsp;이러한 방식을 2의 보수법 방식이라고 합니다. 컴퓨터는 실제로 뺄셈을 하지 못하기 때문에 ‘-‘기호를 사용하지 못하기 때문에 음수를 표현하기 위해서 2의 보수법을 사용합니다.   
+ &nbsp;이러한 방식을 **2의 보수법** 이라고 합니다. 컴퓨터는 실제로 뺄셈을 하지 못해서 ‘-‘기호를 사용하지 못합니다. 때문에 음수를 표현하기 위해서 2의 보수법을 사용합니다.   
 
 >2의 보수(two's complement) 란 어떤 수를 커다란 2의 제곱수에서 뻬서 얻은 이진수이다. 2의 보수는 대부분의 산술연산에서 원래 숫자의 음수처럼 취급된다. 주어진 이진수보다 한 자리 높고 가장 높은 자리가 1이며 나머지가 0인 수에서 주어진 수를 빼서 얻은 수가 2의 보수이다. 혹은 주어진 이진수의 모든 자리의 숫자를 반전(0을 1로, 1을 0으로)시킨 뒤, 여기에 1을 더하면 2의 보수를 얻을 수 있다. - 위키피디아 -
 
