--- a/_posts/til/2020-12/2020-12-10-til.md
+++ b/_posts/til/2020-12/2020-12-10-til.md
@@ -4,13 +4,15 @@ title: 201210-TIL
 category: til
 permalink: /til/:year/:month/:day/:title/
 
-tags: [til]
+tags: [til, stack, 자료구조, 연결리스트]
 comments: true
 ---
 
 # 학습 내용
 - 연결리스트
+ [https://odong-tree.github.io/자료구조/2020/12/10/linkedlist/](https://odong-tree.github.io/자료구조/2020/12/10/linkedlist/)
 - Stack
+  [https://odong-tree.github.io/자료구조/2020/12/10/stack/](https://odong-tree.github.io/자료구조/2020/12/10/stack/)
 - Queue
 <br>
 
@@ -37,5 +39,18 @@ comments: true
 - 연결리스트는 왜 자료구조의 베이스라고 할까?
 - 연결리스트는 큐나 스택의 개념을 구현하기 위해 사용하는 자료구조 중 하나이다.
 - Swift의 Array는 전통적인 개념의 배열이 아니므로 혼동하지 말자.
+- 연결 리스트를 직접 코드로 구현해보면서 많은 이해가 가능했다. 역시 직접 해보는 편이 가장 좋은 것 같다.
 
-#### [swift로 Stack 구현해보기]
+#### [연결리스트보다 메서드가 이미 다 구현되어있는 배열만 쓰면 안될까?]
+- Swift의 Array는 전통적인 배열과는 상이한 부분이 있다. 특히 저장 공간에 대해서 그러하다.
+- 태어날 때부터 정해진 저장공간을 가지는 배열과는 달리 Array는 스마트하게 반응했다. 만약 저장공간이 부족해지면 용량을 2배만큼 늘려 현재 사용한 용량만큼을 더 사용할 수 있게 자동으로 늘려준다.
+- 그렇다면 연결리스트보다 그냥 메서드가 이미 다 구현되어있는 배열만 쓰면 안될까?
+- 음. 우선 저장할 데이터의 양이 적은 경우라면 문제될 부분이 없겠지만, 저장할 데이터의 수가 아주아주 많아진다면, 그 메모리를 2배씩 늘려나가게 된다면. 이는 매우 비효율적인 것일지도 모르겠다.
+
+- **추가로 궁금한 점: 사진 앨범의 자료 구조는 어떻게 되어있을까?**
+
+
+
+# 느낀점
+- 자료 구조에 눈을 떴다! 이해하고 싶어서 열심히 찾아보고, 코드로 구현해보았다. (블로그 링크는 위에 있습니다.) 하지만 자료 구조에 대해 공부하는데에 시간이 많이 오래 걸렸다. 초반에 이해하는데에서 무수한 삽질이 있었기에 미련한 공부를 할 수 밖에 없었다. 아직 어딜 파야 물이 나오는지를 모르니 삽질이 줄어들지를 않는다.
+- 꾸역꾸역 이해하기 시작하니 자료구조는 매우 재밌었다. 너무 매력적이었다. 배열이야 실생활에서도 많이 접할 법한 것이지만, 특히 연결리스트는 충격적으로 멋있었다. 만든 사람은 천재일지도 모른다! 근데 애석하게도. 연결리스트를 어디 써먹는지는 잘 이해가 안된다.
