--- a/_posts/자료구조/2020-12-11-queue.md
+++ b/_posts/자료구조/2020-12-11-queue.md
@@ -16,11 +16,13 @@ comments: true
 연결 리스트, 스택에 이어서 이번에는 큐 (Queue)에 대해서 알아보고,    
 Swift로 구현해보도록 하겠습니다.   <br>
 왠지 새침하게 생긴 큐는 어떤 자료 구조일까요?
+
 <br>
 
-# 큐 (Queue) <br>
 
+# 큐 (Queue)    <br>
 
+![queue](/assets/post-img/자료구조/queue.jpg)
 
 큐는 먼저 입력된 데이터가 먼저 출력되는 **FIFO(First In First Out)** 데이터 구조입니다.         
 큐는 한국말로 **대기열**이라고도 합니다.   
