--- a/_posts/til/2020-12/2020-12-15-til.md
+++ b/_posts/til/2020-12/2020-12-15-til.md
@@ -15,7 +15,12 @@ comments: true
 # 고민한 점/ 해결 방법
 #### [조건문과 가독성, 성능?]
 - 유난히 조건을 따져야하는 경우가 많았던 프로젝트였다. 조건문이 많이 요구되었는데, 가독성에 대한 고민이 많았다. 여러개의 조건문이 중첩되게 되면 코드의 depth가 쉽게 깊어졌다. 어떻게 이 depth를 해결해줄 수 있을까?
-- guard문과 메서드의 생성으로 해결할 수 있었다. 어제 if와 guard에 대한 공부로 guard는 '예외'의 경우만을 처리하는 걸로 인식했는데, 메서드에서 빠른 탈출만을 위한 코드로도 유용했다.
+- guard문과 메서드의 생성으로 해결할 수 있었다. 어제 if와 guard에 대한 공부로 guard는 '예외'의 경우만을 처리하는 걸로 인식했는데, 메서드에서 빠른 탈출만을 위한 코드로도 유용했다.   
+
+>코드리뷰 내용을 덧붙입니다.
+>
+>빠른 탈출을 위한 이유로 guard를 사용했다고 했는데, 예외처리로서의 gaurd의 의미를 해치지 않는 방법으로는 그냥 if 구문을 통해 return으로 종료를 시켜도 무방할 것 같습니다.      
+
 - 또한 내부의 조건문에 대해서는 따로 메서드로 분류하여, 중첩되는 조건문을 보다 간단하게 표현할 수 있었다.
 - 하지만 한 가지 고민이 들었다. 사실 if문의 중첩을 피하고 싶었던 이유는 성능상의 문제였는데 조건문이 여러개 중첩되는 코드를 잦은 빈도로 사용해야한다면 컴퓨터가 부담을 느끼지는 않을까 하는 문제였다. 메서드로 가독성을 좋게한다고 한들, 결국 처리해야하는 depth는 같지 않은가?
 - 아직 컴퓨터의 성능에 대해서 기준을 세우는 방법을 모르겠다. 캠퍼 라자냐와 이야기해본 결과, 3개 정도 중첩되는 조건문이 크게 문제가 되지는 않을 것이라는 판단을 내리기는 했다.
