카테고리 수정

--- a/_posts/DataStructure/2020-12-10-stack.md
+++ b/_posts/DataStructure/2020-12-10-stack.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 스택(Stack), Swift로 구현하기
-category: 자료구조
-tags: [자료구조, stack]
+category: DataStructure
+tags: [DataStructure, Stack]
 comments: true
 ---
 
