--- a/_posts/ios/2020-12-18-unittest.md
+++ b/_posts/ios/2020-12-18-unittest.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Swift로 Unit Test(단위 테스트) 하기
-category: [ios]
-tags: [test]
+category: iOS
+tags: [Test]
 comments: true
 ---
 
