--- a/_posts/ios/2020-12-28-kvo_kvc.md
+++ b/_posts/ios/2020-12-28-kvo_kvc.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: KVO(Key-Value-Observing), KVC(Key-Value-Coding)
-category: ios
-tags: [kvo, kvc]
+category: iOS
+tags: [KVO, KVC]
 comments: true
 ---
 
