--- a/_posts/swift/2020-12-19-closure.md
+++ b/_posts/swift/2020-12-19-closure.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 클로져 (Closure)
-category: swift
-tags: [closure]
+category: Swift
+tags: [Closure]
 comments: true
 ---
 >이 글은 공부 중에 작성하는 글입니다.    
