--- a/_posts/til/2020-12/2020-12-10-til.md
+++ b/_posts/til/2020-12/2020-12-10-til.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: 201210-TIL
-category: til
+category: TIL
 permalink: /til/:year/:month/:day/:title/
 
-tags: [til, stack, 자료구조, 연결리스트]
+tags: [TIL, Stack, 자료구조, 연결리스트]
 comments: true
 ---
 
