--- a/_posts/til/2020-12/2020-12-19-til.md
+++ b/_posts/til/2020-12/2020-12-19-til.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: 201219-TIL
-category: til
+category: TIL
 permalink: /til/:year/:month/:day/:title/
 
-tags: [til]
+tags: [TIL]
 comments: true
 ---
 # 학습 내용
