--- a/_posts/ios/2020-12-21-json.md
+++ b/_posts/ios/2020-12-21-json.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: JSON 파싱하기
-category: ios
-tags: [json]
+category: iOS
+tags: [JSON]
 comments: true
 ---
 >이 글은 공부 중에 작성하는 글입니다.      
