--- a/_posts/til/2020-11/2020-11-18-til.md
+++ b/_posts/til/2020-11/2020-11-18-til.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 201118-TIL
-category: til
+category: TIL
 permalink: /til/:year/:month/:day/:title/
-tags: [til]
+tags: [TIL]
 comments: true
 ---
 
