카테고리 이름 수정

--- a/_posts/자료구조/2020-12-10-stack.md
+++ b/_posts/자료구조/2020-12-10-stack.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 스택(Stack), Swift로 구현하기
-category: DataStructure
-tags: [DataStructure, Stack]
+category: 자료구조
+tags: [자료구조, Stack]
 comments: true
 ---
 
