--- a/_posts/자료구조/2020-12-11-queue.md
+++ b/_posts/자료구조/2020-12-11-queue.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 큐 (Queue), Swift로 구현하기
-category: DataStructure
-tags: [DataStructure, Queue]
+category: 자료구조
+tags: [자료구조, Queue]
 comments: true
 ---
 
