--- a/_posts/til/2021-1/2021-1-4-til.md
+++ b/_posts/til/2021-1/2021-1-4-til.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: 210104-TIL
-category: til
+category: TIL
 permalink: /til/:year/:month/:day/:title/
 
-tags: [til]
+tags: [TIL]
 comments: true
 ---
 
