--- a/_posts/til/2021-1/2021-1-7-til.md
+++ b/_posts/til/2021-1/2021-1-7-til.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 210106-TIL
+title: 210107-TIL
 category: TIL
 permalink: /til/:year/:month/:day/:title/
 
@@ -18,7 +18,7 @@ comments: true
 
 # 고민한 점 / 해결 방법
 
-#### [동시성]
+####  [DispatchQueue, 스레드 순서?]
 - 원래 은행원 3명을 동작시켜주기 위한 코드로 for 구문을 사용했다. 하지만 첫번째 은행원이 didSet의 늪에 빠져버리면서 결과적으로 혼자만 일하는 상황이 발생했다. 동시에 일을 시켜주고 싶었다.
 
 ```swift
@@ -44,7 +44,7 @@ for i in 1...3 {
 #### [안전성, 휴먼 에러]
 - 파라미터에 넣어줘도 되는 변수나 상수를 타입의 프로퍼티로 만들어줄 필요가 있을까.
 - 처음에는 불필요한 프로퍼티라고 판단이 들었으나 피드백을 받으면서 다시 생각해보게 되었다. 프로퍼티를 만들면 저장 공간이 소요되는 것이 불필요하다고 생각했다. 하지만 유지보수의 측면에서 프로퍼티를 만들어주면 더 안전하다고 생각하게 되었다.
-- 전달인자에 상수로서 값을 전달해주면, 우선 해당 값을 수정해야할때 코드를 찾는 에너지가 많이 들어갔다. 또한 수정이 직관적이지 못하고 관계를 항상 생각해야했다. 프로퍼티로 만들어두는 것이 코드에 다시 접근하는 효율이 더 좋은 것 같다.
+- 전달인자에 상수로서 값을 전달해주면, 우선 해당 값을 수정해야할때 코드를 찾는 에너지가 많이 들어갔다. 또한 수정이 직관적이지 못하고 관계를 항상 생각해야했다. 프로퍼티로 만들어두는 것이 코드에 다시 접근하는 효율이 더 좋은 것 같다. 즉 휴먼에러를 줄일 수 있는 방향인 것 같다.
 
 <br>
 
