--- a/_posts/CS/2021-1-18-http.md
+++ b/_posts/CS/2021-1-18-http.md
@@ -156,6 +156,7 @@ HTTPS 프로토콜은 SSL(보안 소켓 계층)을 사용함으로써 이 문제
 >- **TLS(Transport Layer Security)**
 >    - 배경 : SSL 3.0이 표준화된 이후 IETF는 1996년 6월부터 TLS 프로토콜에 대한 표준화(SSL v3.1)
 >    - 특징 : SSL 3.0을 기반으로 한 업그레이드 프로토콜
+> [이 페이지](http://wiki.gurubee.net/display/SWDEV/SSL+%28TLS%29) 를 참고하여 작성합니다.
 
 <br>
 
@@ -174,6 +175,7 @@ HTTPS 프로토콜은 SSL(보안 소켓 계층)을 사용함으로써 이 문제
 - [https://developer.mozilla.org/ko/docs/Web/HTTP](https://developer.mozilla.org/ko/docs/Web/HTTP)
 - [https://ko.wikipedia.org/wiki/CRUD](https://ko.wikipedia.org/wiki/CRUD)
 - [http://blog.wishket.com/http-vs-https-차이-알면-사이트의-레벨이-보인다/](http://blog.wishket.com/http-vs-https-차이-알면-사이트의-레벨이-보인다/)
+- [http://wiki.gurubee.net/display/SWDEV/SSL+%28TLS%29](http://wiki.gurubee.net/display/SWDEV/SSL+%28TLS%29)
 
 <br>
 <br>
