--- a/_posts/CS/2021-1-18-http.md
+++ b/_posts/CS/2021-1-18-http.md
@@ -155,8 +155,8 @@ HTTPS 프로토콜은 SSL(보안 소켓 계층)을 사용함으로써 이 문제
 >   - 주요 기능 : 서버 인증, 클라이언트 인증, 기밀성 보장
 >- **TLS(Transport Layer Security)**
 >    - 배경 : SSL 3.0이 표준화된 이후 IETF는 1996년 6월부터 TLS 프로토콜에 대한 표준화(SSL v3.1)
->    - 특징 : SSL 3.0을 기반으로 한 업그레이드 프로토콜
-> [이 페이지](http://wiki.gurubee.net/display/SWDEV/SSL+%28TLS%29) 를 참고하여 작성합니다.
+>    - 특징 : SSL 3.0을 기반으로 한 업그레이드 프로토콜                     
+> [이 페이지](http://wiki.gurubee.net/display/SWDEV/SSL+%28TLS%29) 를 참고하여 작성하였습니다.
 
 <br>
 
