--- a/_posts/ios/2020-12-21-json.md
+++ b/_posts/ios/2020-12-21-json.md
@@ -196,11 +196,19 @@ do {
 ```
 
 <br>
+<br>
 
+### + JSON 파일 파싱하기
+```swift
+let data = NSDataAsset(name: "파싱할 JSON 파일 이름")!
+let someType = try JSONDecoder().decode(<#T##type: Decodable.Protocol##Decodable.Protocol#>, from: <#T##Data#>)
+```
 
+<br>
 <br>
 
 #### 참고
 - [https://www.boostcourse.org/mo326/lecture/18732](https://www.boostcourse.org/mo326/lecture/18732)
 - [https://namu.wiki/w/JSON](https://namu.wiki/w/JSON)
 - [https://developer.apple.com/documentation/foundation/jsondecoder](https://developer.apple.com/documentation/foundation/jsondecoder)
+- [https://developer.apple.com/documentation/uikit/nsdataasset](https://developer.apple.com/documentation/uikit/nsdataasset)
