--- a/_posts/ios/2020-12-21-json.md
+++ b/_posts/ios/2020-12-21-json.md
@@ -199,9 +199,10 @@ do {
 <br>
 
 ### + JSON 파일 파싱하기
+
 ```swift
 let data = NSDataAsset(name: "파싱할 JSON 파일 이름")!
-let someType = try JSONDecoder().decode(<#T##type: Decodable.Protocol##Decodable.Protocol#>, from: <#T##Data#>)
+let someType = try JSONDecoder().decode(type: Decodeble.Protocol, from: Data)
 ```
 
 <br>
