--- a/_posts/ios/2021-2-22-coredata2.md
+++ b/_posts/ios/2021-2-22-coredata2.md
@@ -12,7 +12,7 @@ comments: true
 
 안녕하세요 오동나무입니다.  <br>
 
-지난번에 작성했던 [CoreData 이해하기 1](https://odong-tree.github.io/ios/2021/02/20/coredata/)에 이어서 Xcode에서 직접 CoreData를 다루어보면서 공부해도록 하겠습니다.
+지난번에 작성했던 [CoreData 이해하기 1](https://odong-tree.github.io/ios/2021/02/20/coredata/)에 이어서 **간단하게**  Entity 와 Attributes에 대해서 살펴보도록 하겠습니다.
 
 <br>
 <br>
